--- a/ok/bc/bc05-0.0.2.0.0.md
+++ b/ok/bc/bc05-0.0.2.0.0.md
@@ -1,8 +1,8 @@
 ### 附：茯神
 
-〔原文〕**主治略同茯苓，但茯苓入脾、胃之用多，茯神入心之用多。开心益智，安魂养神，疗风眩**（1）**心虚，健忘多恚。即茯苓抱根生者。**昂按：以其抱心，故能补心也。**去皮及中木用。**
+〔原文〕**主治略同茯苓，但茯苓入脾、胃之用多，茯神入心之用多。开心益智，安魂养神，疗风眩**（1）**心虚，健忘多恚。即茯苓抱根生者。**<small>昂按：以其抱心，故能补心也。</small>**去皮及中木用。**
 
-**茯神心木名黄松节。疗诸筋挛缩，偏风㖞斜**（2）**，心掣健忘。**心木一两，乳香一钱，石器炒研，名松节散。每服二钱。木瓜汤下，治一切筋挛疼痛。乳香能伸筋，木瓜能舒筋也。
+**茯神心木名黄松节。疗诸筋挛缩，偏风㖞斜**（2）**，心掣健忘。**<small>心木一两，乳香一钱，石器炒研，名松节散。每服二钱。木瓜汤下，治一切筋挛疼痛。乳香能伸筋，木瓜能舒筋也。</small>
 
 【讲解】（1）风眩：属眩晕的一种。又称风头眩，由于体虚，风邪入脑所致。证见头晕眼花，呕逆；甚则厥逆，发作无常。（2）偏风㖞斜：偏风又称偏枯，多由营卫俱虚，真气不能充于全身，或兼邪气侵袭，因而发生半身不遂或口眼㖞斜。
 
