--- a/ok/bc/bc05-0.0.3.0.0.md
+++ b/ok/bc/bc05-0.0.3.0.0.md
@@ -1,8 +1,8 @@
 ### 猪苓
 
-〔原文〕**苦泄滞、淡利窍、甘助阳。入膀胱肾经。升而能降，开腠发汗，利便行水，与茯苓同而不补，治伤寒温疫**（1）**大热，**《经疏》曰：大热利小便，亦分消之意。**懊𢙐消渴，肿胀淋浊，泻痢痎疟**（2）。
+〔原文〕**苦泄滞、淡利窍、甘助阳。入膀胱肾经。升而能降，开腠发汗，利便行水，与茯苓同而不补，治伤寒温疫**（1）**大热，**<small>《经疏》曰：大热利小便，亦分消之意。</small>**懊𢙐消渴，肿胀淋浊，泻痢痎疟**（2）。
 
-疟多由暑，暑必兼湿。经曰：夏伤于暑，秋必痎疟。**然耗津液，多服损肾昏目。**肾水不足则目昏。仲景五芩散，猪苓、茯苓、泽泻、白术、桂，为治水之总剂。昂按：经曰：膀胱者，州都之官，津液藏焉，气化则能出矣。用肉桂辛热引入膀胱，所以化其气也。除桂名四苓散。《资生经》曰：五苓散能生津液，亦通大便。曾世荣治惊风，亦用五苓散。白茯苓安心神，泽泻导小便，小肠利而心气平，木得桂而枯，能抑肝而风自止，可谓善用五苓者矣。**多生枫树下，块如猪屎，故名。**马屎曰通，猪屎曰苓。苓即屎也，古字通用。**肉白而实者良，去皮用。**
+<small>疟多由暑，暑必兼湿。经曰：夏伤于暑，秋必痎疟。</small>**然耗津液，多服损肾昏目。**<small>肾水不足则目昏。仲景五芩散，猪苓、茯苓、泽泻、白术、桂，为治水之总剂。昂按：经曰：膀胱者，州都之官，津液藏焉，气化则能出矣。用肉桂辛热引入膀胱，所以化其气也。除桂名四苓散。《资生经》曰：五苓散能生津液，亦通大便。曾世荣治惊风，亦用五苓散。白茯苓安心神，泽泻导小便，小肠利而心气平，木得桂而枯，能抑肝而风自止，可谓善用五苓者矣。</small>**多生枫树下，块如猪屎，故名。**<small>马屎曰通，猪屎曰苓。苓即屎也，古字通用。</small>**肉白而实者良，去皮用。**
 
 【讲解】（1）瘟疫：病名。感受疫疠之气，造成流行的急性传染病的总称。（2）痎疟：痎（jiē皆）疟，是疟疾的通称，以疟发该时，或日作、或间日作。
 
