--- a/ok/bc/bc05-0.0.4.0.0.md
+++ b/ok/bc/bc05-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 泽泻
 
-〔原文〕**甘淡微咸。入膀胱，利小便，泻肾经之火邪，功专利湿行水。治消渴痰饮，呕吐泻痢，肿胀水痞，脚气疝痛，淋沥阴汗，**阴间有汗。**尿血泄精，**既利水而又止泄精，何也？此乃湿热为病，不为虚滑者言也。库滑则当用补涩之药。**湿热之病，湿热既除，则清气上行。又能养五脏，益气力，起阴气，补虚损，止头旋，有聪耳明目之功。**脾胃有湿热，则头重耳鸣目昏。渗去其湿，则热亦随去，土乃得令，而清气上行。故《本经》列之上品，云聪耳明目，而六味丸用之，今人多以昏目疑之。**多服昏目，**小便过利，而肾水虚故也。眼中有水属膀胱，过利则水涸而火生。张仲景八味丸用泽泻，寇宗奭谓其接引桂附入肾经。李时珍曰：非接引也，乃取其泻膀胱之邪气也。古人用补药，必兼泻邪，邪去则补药得力，一阖一辟，此乃玄妙，后人不知此理，专一于补，必致偏胜之患矣。王履曰：地黄、山茱、茯苓、丹皮，皆肾经药，桂附右肾命门之药，何待接引乎？钱仲阳谓肾为真水，有补无泻，或云脾虚肾旺，故泻肾扶脾，不知肾之真水不可泻，泻其伏留之邪耳。脾喜燥，肾恶燥，故兼朴为难。易老曰：去脬中留垢，以其微咸能泻伏火故也。昂按：六味丸有熟地之温，丹皮之凉，山药之涩，茯苓之渗，山茱之收，泽泻之泻，补肾而兼补脾，有补而必有泻，相和相济，以成平补之功，乃平淡之神奇，所以为古今不易之良方也。即有加减，或加紫河车一具，或五味、麦冬、杜仲、牛膝之类，不过二味，极三四味而止。今人或疑泽泻之泻而减之，多拣本草补药，恣意加入，有补无泻，且客倍于主，责成不专，而六味之功，且退处于虚位，失制方配合之本旨矣，此近世庸师之误也。**盐水拌，或酒浸用，忌铁。**
+〔原文〕**甘淡微咸。入膀胱，利小便，泻肾经之火邪，功专利湿行水。治消渴痰饮，呕吐泻痢，肿胀水痞，脚气疝痛，淋沥阴汗，**<small>阴间有汗。</small>**尿血泄精，**<small>既利水而又止泄精，何也？此乃湿热为病，不为虚滑者言也。虚滑则当用补涩之药。</small>**湿热之病，湿热既除，则清气上行。又能养五脏，益气力，起阴气，补虚损，止头旋，有聪耳明目之功。**<small>脾胃有湿热，则头重耳鸣目昏。渗去其湿，则热亦随去，土乃得令，而清气上行。故《本经》列之上品，云聪耳明目，而六味丸用之，今人多以昏目疑之。</small>**多服昏目，**<small>小便过利，而肾水虚故也。眼中有水属膀胱，过利则水涸而火生。张仲景八味丸用泽泻，寇宗奭谓其接引桂附入肾经。李时珍曰：非接引也，乃取其泻膀胱之邪气也。古人用补药，必兼泻邪，邪去则补药得力，一阖一辟，此乃玄妙，后人不知此理，专一于补，必致偏胜之患矣。王履曰：地黄、山茱、茯苓、丹皮，皆肾经药，桂附右肾命门之药，何待接引乎？钱仲阳谓肾为真水，有补无泻，或云脾虚肾旺，故泻肾扶脾，不知肾之真水不可泻，泻其伏留之邪耳。脾喜燥，肾恶燥，故兼朴为难。易老曰：去脬中留垢，以其微咸能泻伏火故也。昂按：六味丸有熟地之温，丹皮之凉，山药之涩，茯苓之渗，山茱之收，泽泻之泻，补肾而兼补脾，有补而必有泻，相和相济，以成平补之功，乃平淡之神奇，所以为古今不易之良方也。即有加减，或加紫河车一具，或五味、麦冬、杜仲、牛膝之类，不过二味，极三四味而止。今人或疑泽泻之泻而减之，多拣本草补药，恣意加入，有补无泻，且客倍于主，责成不专，而六味之功，且退处于虚位，失制方配合之本旨矣，此近世庸师之误也。</small>**盐水拌，或酒浸用，忌铁。**
 
 【讲解】**泽泻利水渗湿，泄热。**为泽泻科多年生沼泽植物泽泻的块茎。切片，生用，麸炒或盐水炒用。本品甘淡性寒。甘淡渗湿，寒能泻热。入肾与膀胱经，功能泻肾经之火，利膀胱之湿，为常用之利水渗湿泻热药。凡湿热内蕴之小便不利，水肿泄泻，淋浊痰饮等水湿证，或肾经火盛皆可应用。《备要》言：补五脏，益气力，起阴气，补虚损，止头旋，有聪耳明目之功。皆因湿热浊气既除，清气得行，所谓一除而百病与之俱除也。然小便过利，肾气损伤，又会导致眼目昏花。
 
