--- a/ok/bc/bc05-0.0.6.0.0.md
+++ b/ok/bc/bc05-0.0.6.0.0.md
@@ -1,8 +1,8 @@
 ### 车前草 车前子
 
-〔原文〕**甘寒。凉血去热，止吐衄，消瘕瘀，明目通淋。**凡利水之剂，多损于目，惟此能解肝与小肠之热，湿热退而目清矣。雷𢽾曰：使叶勿使茎蕊。
+〔原文〕**甘寒。凉血去热，止吐衄，消瘕瘀，明目通淋。**<small>凡利水之剂，多损于目，惟此能解肝与小肠之热，湿热退而目清矣。雷𢽾曰：使叶勿使茎蕊。</small>
 
-**子甘寒。清肺肝风热，渗膀胱湿热，利小便而不走气，与茯苓同功，强阴益精，令人有子**。肾有二窍，车前子能利水窍而固精窍。精盛则有子，五子衍宗丸用之，枸杞、菟丝各八两，五味、覆盆各四两，车前二两，蜜丸。惯遗泄者，车前易莲子。时珍曰：人服食，须佐他药，如六味丸之用泽泻可也，若单用则过泻。**治湿痹五淋，暑湿泻痢，**欧阳文忠患暴下，国医不能愈。夫人曰：市有药，三文一贴，甚效。公不肯服，夫人杂他药进之，一服而愈。问其方，乃车前子为末，米饮下二钱。一云此药利水而不动气，水道利则清浊分，谷脏自止矣。**目赤障翳，**能除肝热。**催生下胎。酒蒸捣饼，焙研。**酒蒸捣讲，入滋补药；炒研，入利水泄泻药。
+**子甘寒。清肺肝风热，渗膀胱湿热，利小便而不走气，与茯苓同功，强阴益精，令人有子**。<small>肾有二窍，车前子能利水窍而固精窍。精盛则有子，五子衍宗丸用之，枸杞、菟丝各八两，五味、覆盆各四两，车前二两，蜜丸。惯遗泄者，车前易莲子。时珍曰：人服食，须佐他药，如六味丸之用泽泻可也，若单用则过泻。</small>**治湿痹五淋，暑湿泻痢，**<small>欧阳文忠患暴下，国医不能愈。夫人曰：市有药，三文一贴，甚效。公不肯服，夫人杂他药进之，一服而愈。问其方，乃车前子为末，米饮下二钱。一云此药利水而不动气，水道利则清浊分，谷脏自止矣。</small>**目赤障翳，**<small>能除肝热。</small>**催生下胎。酒蒸捣饼，焙研。**<small>酒蒸捣饼，入滋补药；炒研，入利水泄泻药。</small>
 
 【讲解】**车前草以解毒凉血为主要功效，兼利水通淋。**为车前科多年生草本植物车前或平车前的全草。其成熟种子名车前子，也入药。车前草生用或鲜用。车前子生用或盐水炒用。
 
