--- a/ok/bc/bc05-0.0.7.0.0.md
+++ b/ok/bc/bc05-0.0.7.0.0.md
@@ -1,6 +1,6 @@
 ### 滑石
 
-〔原文〕**滑利窍，淡渗湿，甘益气，补脾胃，寒泻热，降心火，白色入肺，上开腠理而发表，**肺主皮毛。**下走膀胱而行水，通六腑九窍津液，为足太阳经**膀胱。**本药。治中暑积热，呕吐烦渴，黄疸水肿，脚气淋闭，**偏主石淋。**水泻热痢，**六一散加红麯治赤痢，加干姜治白痢。**吐血衄血，诸疮肿毒，为荡热除湿之要剂。消暑散结，通乳滑胎。**时珍曰：滑石利窍，不独小便也。上开腠理而发表，是除上中之湿热；下利便溺而行水，是除中下之湿热。热去则三焦宁而表面和，湿去则阑门通而阴阳利矣，阑门分别清浊，乃小肠之下口。河间益元散，通治上下表里诸病，盖是此意。益元散一名天水散，一名六一散，取天一生水，地六成之之义。滑石六钱，甘草一钱，或加辰砂。滑石治渴，非实止渴，资其利窍，渗去湿热，则脾胃中和而渴自止耳。若无湿小便利而渴者，内有燥热，宜滋润或误服此，则愈亡其津液而渴转甚矣，故王好古以为至燥之剂。**白而润者良。石韦为使，宜甘草。**走泄之性，宜甘草以和之。
+〔原文〕**滑利窍，淡渗湿，甘益气，补脾胃，寒泻热，降心火，白色入肺，上开腠理而发表，**<small>肺主皮毛。</small>**下走膀胱而行水，通六腑九窍津液，为足太阳经**<small>膀胱。</small>**本药。治中暑积热，呕吐烦渴，黄疸水肿，脚气淋闭，**<small>偏主石淋。</small>**水泻热痢，**<small>六一散加红麯治赤痢，加干姜治白痢。</small>**吐血衄血，诸疮肿毒，为荡热除湿之要剂。消暑散结，通乳滑胎。**<small>时珍曰：滑石利窍，不独小便也。上开腠理而发表，是除上中之湿热；下利便溺而行水，是除中下之湿热。热去则三焦宁而表面和，湿去则阑门通而阴阳利矣，阑门分别清浊，乃小肠之下口。河间益元散，通治上下表里诸病，盖是此意。益元散一名天水散，一名六一散，取天一生水，地六成之之义。滑石六钱，甘草一钱，或加辰砂。滑石治渴，非实止渴，资其利窍，渗去湿热，则脾胃中和而渴自止耳。若无湿小便利而渴者，内有燥热，宜滋润或误服此，则愈亡其津液而渴转甚矣，故王好古以为至燥之剂。</small>**白而润者良。石韦为使，宜甘草。**<small>走泄之性，宜甘草以和之。</small>
 
 【讲解】**滑石功能利水渗湿，清热解暑。**为单斜晶系硅酸盐类矿物滑石的块状体。除去杂石，打碎或用粉碎、过筛后即成滑石粉，如用水飞磨粉，称飞滑石。
 
