--- a/ok/bc/bc05-0.0.9.0.0.md
+++ b/ok/bc/bc05-0.0.9.0.0.md
@@ -1,6 +1,6 @@
 ### 通草
 
-〔原文〕**色白气寒，体轻味淡。气寒则降，故入肺经，引热下行而利小便；味淡则升，故入胃经，通气上达而下乳汁。治五淋水肿、目昏耳聋、鼻塞失音，**淡通窍，寒降火，利肺气。**退热催生。**
+〔原文〕**色白气寒，体轻味淡。气寒则降，故入肺经，引热下行而利小便；味淡则升，故入胃经，通气上达而下乳汁。治五淋水肿、目昏耳聋、鼻塞失音，**<small>淡通窍，寒降火，利肺气。</small>**退热催生。**
 
 【讲解】**通草比木通力缓，以淡渗利湿，通乳为主要功效。**为五加科灌木植物通脱木的茎髓。将茎髓加工成方形薄片，称为方通草；加工时切下来的边条，称为丝通草。生用。
 
