--- a/ok/bc/bc05-0.0.5.0.0.md
+++ b/ok/bc/bc05-0.0.5.0.0.md
@@ -1,6 +1,6 @@
 ### 薏苡仁
 
-〔原文〕**甘淡。微寒而属土，阳明**胃**药也。甘益胃，土胜水，淡渗湿。泻水所以益土，故健脾。治水肿湿痹，脚气疝气，泄痢热淋。益土所以生金，故补肺清热。**色白入肺，微寒清热。**治肺痿肺痈，咳吐脓血。**以猪肺蘸苡仁米服。**扶土所以抑木，故治风热筋急拘挛。**厥阴风木主筋，然治筋骨之病，以阳明为本。阳明主润宗筋，宗筋主束骨而利机关者也，阳明虚则宗筋纵驰。故经曰：治痿独取阳明。又曰：肺热叶焦，发为痿躄。盖肺者相傅之官，治节出焉。阳明湿热上蒸于肺，则肺热叶焦，气无所主而失其治节，敌痿躄。薏苡理脾，而兼清热补肺。筋寒则急，热则缩，湿则纵。然寒湿久留，亦变为热，又有热气熏蒸，水液不行，久而成湿者。薏苡去湿要药，因寒因热，皆可用也。《衍义》曰：因寒筋急者不可用。恐不然。**但其力和缓，用之须倍于他药。杀蚘堕胎，炒熟微研。**
+〔原文〕**甘淡。微寒而属土，阳明**<small>胃</small>**药也。甘益胃，土胜水，淡渗湿。泻水所以益土，故健脾。治水肿湿痹，脚气疝气，泄痢热淋。益土所以生金，故补肺清热。**<small>色白入肺，微寒清热。</small>**治肺痿肺痈，咳吐脓血。**<small>以猪肺蘸苡仁米服。</small>**扶土所以抑木，故治风热筋急拘挛。**<small>厥阴风木主筋，然治筋骨之病，以阳明为本。阳明主润宗筋，宗筋主束骨而利机关者也，阳明虚则宗筋纵驰。故经曰：治痿独取阳明。又曰：肺热叶焦，发为痿躄。盖肺者相傅之官，治节出焉。阳明湿热上蒸于肺，则肺热叶焦，气无所主而失其治节，敌痿躄。薏苡理脾，而兼清热补肺。筋寒则急，热则缩，湿则纵。然寒湿久留，亦变为热，又有热气熏蒸，水液不行，久而成湿者。薏苡去湿要药，因寒因热，皆可用也。《衍义》曰：因寒筋急者不可用。恐不然。</small>**但其力和缓，用之须倍于他药。杀蚘堕胎，炒熟微研。**
 
 【讲解】**薏苡仁具有利水渗湿，健脾止泻，化湿除痹，清热排脓之功。**为禾本科多年生草本植物薏苡的成熟种仁。打下果实晒干，除去外壳及种皮。生用或炒用。
 
