--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -146,6 +146,12 @@
 
 不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
 
+另外，中医在对邪的性质进行描述的时候，有实体物质的邪称为实邪，无形气态或能量类的邪称为虚邪。以后遇到要注意与正气虚、邪气实的概念进行区分，不要混淆。
+
+> 邪热与痰水、肠胃糟粕、宿食、湿浊等有形之邪相结，皆可致心烦，甚则心中懊憹，以其邪之有形，故称”实”。本条所述，乃因汗、吐、下后，表邪入胸，无形之邪热留扰蕴郁胸膈，并未与有形之邪相结，故称"虚”，并非指正气虚衰。
+>
+> 《伤寒论讲解-76条》
+
 ### 1.3、平衡的控制：
 
 在这个例子中，需要有人来对房间的温度进行判断，如果温度高了，需要开放空调，温度低了需要开放暖气，保证房间温度在一个合适的范围之内。现在科技发达，也可以使用传感器侦测温度，用程序进行自动控制。
