--- a/ok/bc/bc05-0.0.13.0.0.md
+++ b/ok/bc/bc05-0.0.13.0.0.md
@@ -1,6 +1,6 @@
 ### 海金沙
 
-〔原文〕**甘寒淡渗。除小肠膀胱血分湿热。治肿满五淋茎痛**⑴。**得栀子、牙硝、硼砂，治伤寒热狂。**大热利小便，此釜底抽薪之义也。**茎细如线，引竹木卫，叶纹皱处，有砂，黄赤色。忌火。**
+〔原文〕**甘寒淡渗。除小肠膀胱血分湿热。治肿满五淋茎痛**⑴。**得栀子、牙硝、硼砂，治伤寒热狂。**<small>大热利小便，此釜底抽薪之义也。</small>**茎细如线，引竹木卫，叶纹皱处，有砂，黄赤色。忌火。**
 
 【讲解】⑴茎痛：指排尿时尿道疼痛。
 
