--- a/ok/bc/bc05-0.0.15.0.0.md
+++ b/ok/bc/bc05-0.0.15.0.0.md
@@ -1,6 +1,6 @@
 ### 茵陈
 
-〔原文〕**苦燥湿，寒胜热。入足太阳膀胱经。发汗利水，以泄太阳阳明**脾、胃。**之湿热。为治黄疸之君药。**脾胃有湿热则发黄，黄者，脾之色也。热甚者，身如橘色，汗如柏汁；亦有寒湿发黄，身熏黄而色暗。大抵治以茵陈为主，阳黄加大黄、栀子，阴黄加附子、干姜，各随寒热治之。**又治伤寒时疾，狂热瘴疟，头痛头旋，女人瘕疝。**皆湿热为病。
+〔原文〕**苦燥湿，寒胜热。入足太阳膀胱经。发汗利水，以泄太阳阳明**<small>脾、胃。</small>**之湿热。为治黄疸之君药。**<small>脾胃有湿热则发黄，黄者，脾之色也。热甚者，身如橘色，汗如柏汁；亦有寒湿发黄，身熏黄而色暗。大抵治以茵陈为主，阳黄加大黄、栀子，阴黄加附子、干姜，各随寒热治之。</small>**又治伤寒时疾，狂热瘴疟，头痛头旋，女人瘕疝。**<small>皆湿热为病。</small>
 
 【讲解】**茵陈善能清利肝胆湿热，为治黄疸之要药。**为菊科多年生草本植物茵陈蒿和滨蒿的幼苗。晒干，生用。
 
