--- a/ok/bc/bc05-0.0.16.0.0.md
+++ b/ok/bc/bc05-0.0.16.0.0.md
@@ -1,6 +1,6 @@
 ### 地肤子
 
-〔原文〕**甘苦气寒。益精强阴，入膀胱，除虚热，利小便而通淋。**时珍曰：无阴则阳无以化，亦犹东垣利小便不通，用栀柏滋肾之意。王节斋曰：小便不通或频数，古方多以为寒，而用温涩之药。殊不知属热者多，盖膀胱火邪妄动，水不得宁，故不能禁而频数也。故老人多频数，是膀胱血少，阳火偏旺也。治法当补膀胱阴血，泻火邪为主，而佐以收涩之剂，如牡蛎、山茱萸、五味之类，不可独用。病本属热，故宜泻火，因水不足，故火动而致便数，小便既多，水益虚矣。故宜补血，补血泻火，治其本也。收之涩之，治其标也。**治㿗疝**（1），**散恶疮。**煎汤洗疮疥良。**叶作浴汤，去皮肤风热丹肿，洗眼除雀盲**（2）**涩痛。叶如蒿，茎赤，子类蚕沙。恶螵蛸。**
+〔原文〕**甘苦气寒。益精强阴，入膀胱，除虚热，利小便而通淋。**<small>时珍曰：无阴则阳无以化，亦犹东垣利小便不通，用栀柏滋肾之意。王节斋曰：小便不通或频数，古方多以为寒，而用温涩之药。殊不知属热者多，盖膀胱火邪妄动，水不得宁，故不能禁而频数也。故老人多频数，是膀胱血少，阳火偏旺也。治法当补膀胱阴血，泻火邪为主，而佐以收涩之剂，如牡蛎、山茱萸、五味之类，不可独用。病本属热，故宜泻火，因水不足，故火动而致便数，小便既多，水益虚矣。故宜补血，补血泻火，治其本也。收之涩之，治其标也。</small>**治㿗疝**（1），**散恶疮。**<small>煎汤洗疮疥良。</small>**叶作浴汤，去皮肤风热丹肿，洗眼除雀盲**（2）**涩痛。叶如蒿，茎赤，子类蚕沙。恶螵蛸。**
 
 【讲解】（1）㿗疝：病名。指寒湿引起的阴囊肿大。（2）雀盲：即夜盲证。以黑夜或暗处视物不清为主证的眼病。
 
