--- a/ok/bc/bc05-0.0.17.0.0.md
+++ b/ok/bc/bc05-0.0.17.0.0.md
@@ -1,6 +1,6 @@
 ### 冬葵子
 
-〔原文〕**甘寒淡滑。润燥利窍，通营卫，滋气脉，行津液，利二便，消水肿，**用榆皮等分煎服。**通关格，下乳滑胎。秋葵复种，经冬至春作子者，名冬葵子。根叶同功，春葵子亦滑，不堪入药。**
+〔原文〕**甘寒淡滑。润燥利窍，通营卫，滋气脉，行津液，利二便，消水肿，**<small>用榆皮等分煎服。</small>**通关格，下乳滑胎。秋葵复种，经冬至春作子者，名冬葵子。根叶同功，春葵子亦滑，不堪入药。**
 
 **蜀葵花，赤者治赤带，白者治白带；赤者治血燥，白者治气燥。亦治血淋关格，皆取其寒润滑利之功也。**
 
