--- a/ok/bc/bc05-0.0.18.0.0.md
+++ b/ok/bc/bc05-0.0.18.0.0.md
@@ -1,8 +1,8 @@
 ### 冬瓜
 
-〔原文〕**寒泻热，甘益脾，利二便，消水肿，**冬瓜任吃效。**止消渴，**苗叶皆治消渴。**散热毒痈肿。**切片敷之。丹溪曰：冬瓜性急而走，久病阴虚者忌之。昂按：冬瓜日食常物，于诸瓜中犹觉宜人，且味甘而不辛，何以见其性急而走乎。
+〔原文〕**寒泻热，甘益脾，利二便，消水肿，**<small>冬瓜任吃效。</small>**止消渴，**<small>苗叶皆治消渴。</small>**散热毒痈肿。**<small>切片敷之。丹溪曰：冬瓜性急而走，久病阴虚者忌之。昂按：冬瓜日食常物，于诸瓜中犹觉宜人，且味甘而不辛，何以见其性急而走乎。</small>
 
-**子补肝明目。**凡药中所用瓜子，皆冬瓜子也。
+**子补肝明目。**<small>凡药中所用瓜子，皆冬瓜子也。</small>
 
 【讲解】**冬瓜能利水消肿，又兼清热化痰。**为葫芦科一年生攀援草本植物冬瓜的果实。果实以食用为主。果皮（冬瓜皮）、种子（冬瓜子）主供药用。均系生用。
 
