--- a/ok/bc/bc05-0.0.20.0.0.md
+++ b/ok/bc/bc05-0.0.20.0.0.md
@@ -1,6 +1,6 @@
 ### 赤小豆
 
-〔原文〕**甘酸**思邈：咸冷。**色赤，心之榖也。性下行，通小肠，利小便，**心与小肠相表里。**行水散血，消肿排脓，清热解毒。治泻痢脚气，**昔有患脚气者，用袋盛赤小豆，朝夕践踏之，遂愈。同鲤鱼煮食汁，能消水肿，煮粥亦佳。**敷一切疮疽**。鸡子白调末箍之，性极粘，干则难揭，入苎根末则不粘。宋仁宗患痄腮，道士赞能取赤小豆四十九粒咒之，杂他药敷之而愈。中贵任承亮亲见，后任自患恶疮，傅永投以药立愈。问之，赤小豆也。承亮始悟道士之咒伪也。后过豫章，见医治胁疽甚捷，任曰：莫非赤小豆耶？医惊拜曰：用此活三十余口，愿勿复宣。**止渴解酒，通乳下胎，然渗津液，久服令人枯瘦。**《十剂》曰：燥可去湿，桑白皮、赤小豆之属是也。按二药未可言燥，盖取其行水之功，然以木通、防己为通剂，通燥二义似重。故本集改热药为燥剂，而以行水为通利。
+〔原文〕**甘酸**<small>思邈：咸冷。</small>**色赤，心之榖也。性下行，通小肠，利小便，**<small>心与小肠相表里。</small>**行水散血，消肿排脓，清热解毒。治泻痢脚气，**<small>昔有患脚气者，用袋盛赤小豆，朝夕践踏之，遂愈。同鲤鱼煮食汁，能消水肿，煮粥亦佳。</small>**敷一切疮疽**。<small>鸡子白调末箍之，性极粘，干则难揭，入苎根末则不粘。宋仁宗患痄腮，道士赞能取赤小豆四十九粒咒之，杂他药敷之而愈。中贵任承亮亲见，后任自患恶疮，傅永投以药立愈。问之，赤小豆也。承亮始悟道士之咒伪也。后过豫章，见医治胁疽甚捷，任曰：莫非赤小豆耶？医惊拜曰：用此活三十余口，愿勿复宣。</small>**止渴解酒，通乳下胎，然渗津液，久服令人枯瘦。**<small>《十剂》曰：燥可去湿，桑白皮、赤小豆之属是也。按二药未可言燥，盖取其行水之功，然以木通、防己为通剂，通燥二义似重。故本集改热药为燥剂，而以行水为通利。</small>
 
 【讲解】**赤小豆既能利水消肿，又善解毒排脓。**为一年生半缠绕草本植物赤小豆或赤豆的成熟种子。种子呈长圆形，体瘦长，靠近一侧上端有白色突起的小点。入药皆生用。
 
