--- a/ok/bc/bc05-0.0.21.0.0.md
+++ b/ok/bc/bc05-0.0.21.0.0.md
@@ -1,6 +1,6 @@
 ### 灯草
 
-〔原文〕**甘淡而寒。降心火，**心能入心。**清肺热，利小肠，**心与小肠相表里，心火清则肺热小肠亦清，而热从小便出矣。**通气止血。治五淋水肿，烧灰吹喉痹，涂乳止夜啼，擦癣最良。**缚成把，擦摩极痒时，虫从草出，浮水可见，十余次则能断也。
+〔原文〕**甘淡而寒。降心火，**<small>心能入心。</small>**清肺热，利小肠，**<small>心与小肠相表里，心火清则肺热小肠亦清，而热从小便出矣。</small>**通气止血。治五淋水肿，烧灰吹喉痹，涂乳止夜啼，擦癣最良。**<small>缚成把，擦摩极痒时，虫从草出，浮水可见，十余次则能断也。</small>
 
 【讲解】**灯草善清心降火，利尿通淋。**为灯心草科多年生草本植物灯心草的干燥茎髓。又名灯芯草。切段生用，或朱砂拌用。
 
