--- a/ok/bc/bc05-0.0.23.0.0.md
+++ b/ok/bc/bc05-0.0.23.0.0.md
@@ -1,6 +1,6 @@
 ### 鲤鱼
 
-〔原文〕**甘平。下水气，利小便，治咳逆上气，脚气黄疸，妊娠水肿。**古方治水肿，有鲤鱼汤，鲤鱼粥。刘河间曰：鲤之治水，鸭之利水，所谓因其气相感也。
+〔原文〕**甘平。下水气，利小便，治咳逆上气，脚气黄疸，妊娠水肿。**<small>古方治水肿，有鲤鱼汤，鲤鱼粥。刘河间曰：鲤之治水，鸭之利水，所谓因其气相感也。</small>
 
 **骨烧灰，疗鱼骨鲠**。
 
