--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -74,7 +74,7 @@
 
 > 张三钖说：“五脏六腑之精华，上彰于明堂，...但当求其有神，虽困无害，神者色中光泽明亮是也，脉有胃气，同一理也。”
 
-为什么面部的色泽能反应人体气血的状态呢？因为人体脏腑与经络相联，全身的经络都与面部相联。所以人的面部就像汽车的指示灯一样，能够反应内在各个部位的健康状态与故障。
+为什么面部的色泽能反应人体气血的状态呢？因为人体脏腑与经络相联，全身的经络都与面部相联。只有脏腑正气充足，功能强健，邪气很少，才能在面部体现出光泽明亮的状态。
 
 > 十二经脉，三百六十五络，其血气皆上注于面而走空窍”
 >
