--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -146,6 +146,26 @@
 
  
 
+人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
+
+通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经，再传于阴脏。外感初起时内在脏腑未伤，可产生足够正气抵抗外邪，所以以正邪相争的实证为多，此时人体机能多呈现为亢奋状态，所以叫阳证。内伤病，若伤及五脏，则较严重，产生精气血的能力下降，正气不足无力抗邪，成为虚证，此时身体机能多呈现为抑制状态，所以叫阴证。
+
+> 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
+>
+> 《素问-太阴阳明论》
+
+后面学习概论辩证章节，有阴阳表里寒热虚实的八纲辨证之说，其中的阴阳即指此处所讲的阴证、阳证。这种阴证、阳证是在宏观层面区分正气是否充足，抗邪是否有力。在微观具体部位，则各处都可以有自身的寒热虚实的失衡情况。比如，一个人的肺部正气不虚，但有痰饮，所以是肺部邪实的情况。肺部痰饮影响了肺部的功能，使其呼吸功能变弱，进而不能给全身提供充足的气，使全身都处于虚弱状态。这种情况，从整体角度看，属于整体正气不足的阴证，但是从肺部局部看，属于肺部正邪相争的实证。
+
+前述是单论内伤或者外感，如果人先有脏腑疾病，本身正气已不足，此时若再有外感侵袭，则极易由外而入里，形成严重问题。若伤及五脏，严重的话会有性命之忧。因此，人在平时就要保养脏腑，培养正气，以备特殊情况下能有足够的力量抵御各种异常侵袭。
+
+光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
+
+《伤寒论》既论述了健康人体外感风、寒之邪所形成的表病的特点和治法，也论述了原本有内伤病的人感受风寒之邪，病邪由表入里，表病转为里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
+
+此外，《伤寒论》主要论述寒邪伤人阳气，形成阳虚寒实格局的处理方法，虽也涉及部分阴虚热实的情况，但还不够详细。后世医家为补其不足，做温病学说，重点论述阴虚热实的辨别与处理方法，其中以吴鞠通所著的《温病条辨》为代表。
+
+由此，《伤寒论》、《金匮要略》、《温病条辨》构成了比较完善的处理各类外感、内伤杂病的中医治疗体系，再结合《黄帝内经》对人体运转机制的讲解，形成了以四大经典为主的中医理论教育体系。
+
 
 
 ## 题目
