--- a/ok/rm/rm00.md
+++ b/ok/rm/rm00.md
@@ -10,7 +10,7 @@
 
 这里，我们暂时抛开那些难懂的概念，举一个简单例子来解释中医是如何看待人体的，中医到底在做什么！
 
-中医把人体看做一个温室花园，人体中的组织器官看做温室中的花草鱼虫。中医是养护生命的医学，其原理和园丁养护温室花草的道理很相似。
+中医把人体看做一个温室花园，人体中的组织器官看做温室中的花草鱼虫。中医是养护生命的医学，其原理和园丁养护温室花草的道理很相似，以调节生命所处的环境平衡为主要任务。
 
 养护花草有四大要素，阳光、水、土壤、空气，缺一不可。园丁的责任就是经常关注花园中这四大要素是否适量平衡，比如水少要浇水、水多要排水，其他要素也是如此。环境调节好后，花草自然会长的好。园丁不太需要关注花草树木的物理特性或者化学成分，比如树干硬度是多少，花朵鲜艳的颜色是因为哪些化学成分等等，那是物理学家和化学家的工作，大家分工不同。
 
