--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -105,7 +105,7 @@
 
 人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。这就是中医的整体观。
 
-### 2、几大指标失衡的常见情况
+### 2、指标失衡与人体疾病
 
 |      | 精     | 神       | 元气 | 天气                          | 血            | 津液   | 形         |
 | ---- | ------ | -------- | ---- | ----------------------------- | ------------- | ------ | ---------- |
