--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -160,11 +160,11 @@
 
 那么如果出现血液指标升高，如何判断疾病是减轻还是加重呢？中医是通过人的面色、舌像、脉像、饮食、睡眠、精神、体力等方面来判断，也即是常说的望闻问切四诊。常有病人同时选择中西医治疗，当遇到两者指标冲突的时候，若不理解中医的道理，可能就放弃了中医的治疗。
 
-西医的很多治疗方法是调节血液指标，缺钾补钾，缺钠补钠，尽量满足血液指标的平衡。中医会从四诊的角度评估西医治疗的优劣。西医治疗后，若从四诊上看有好转，中医可能会认同，若四诊判断没有好转，甚至加重，中医则反对。
+西医的很多治疗方法是调节血液指标，缺钾补钾，缺钠补钠，尽量满足血液指标的平衡。中医则通过四诊的方法，按照中医疾病轻重进退的理论，评估西医治疗的优劣。西医治疗后，若从四诊上看有好转，中医可能会认同，若四诊判断没有好转，甚至加重，中医则反对。实际上很多中医反对西医的原因，并非是反对某一具体疗法，而是发现很多病人经过西医的治疗，原本是正气足、抗邪有力的情况，治疗后转变成正气虚、无力抗邪的情况，也即从阳证转为阴证，从疾病轻浅变为深重。
 
-由此可见，在理解人体运转框架的基础上，中医的四诊非常重要，如果四诊不熟，则对疾病的病位深浅、虚实性质、程度轻重、变化进退没有依据，不是合格的中医。
+由此可见，学习中医，一是要理解中医疾病轻重进退的道理，二是要对中医的四诊非常熟悉，如此才能对疾病的病位深浅、虚实性质、程度轻重、变化进退有理有据。至于治疗之法，反而多种多样，针砭灸药看情况选择即可
 
-总体来说，从中医角度看待西医疗法，大多属于治标之法。治标方法并非无用，“急则治其标，缓则治其本”，遇到紧急情况，用治标之法先缓解状况，然后再慢慢图本是可以的。如果中医学的好，就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的方法未必不可以成为中医的工具，只看能否将其用在合适的时机。
+总体来说，从中医角度看待西医疗法，大多属于治标之法。治标方法并非无用，“急则治其标，缓则治其本”，遇到紧急情况，用治标之法先缓解状况，然后再慢慢图本是可以的。中医学的好就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的疗法未必不可以成为中医的工具，只看能否将其用在合适的时机。
 
 ## 题目
 
