--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -64,7 +64,7 @@
 
 ##### 产生:
 
-卫气根源于下焦肾精转化的阳气，加上中焦脾胃消化的水谷之气中的彪悍部分
+卫气根源于下焦肾精转化的阳气，补充于中焦脾胃消化的水谷之气中的彪悍部分，宣发于上焦。
 
 > 卫气除根于下焦命门阳气，又赖上焦的宣发以外，卫气也由水谷精气所化生，还必须依靠水谷精气的不断充养，才能发挥作用。因此可以认为卫气根源于下焦，资生于中焦，宣发于上焦，卫气与三焦均有密切的联系•
 >
