--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -291,7 +291,9 @@
 
 脏腑为阴，负责将外界的饮食、空气转化为精气血并存储，像地，以五行划分，即木、火、土、金、水；其中脏为阴中之阴，腑为阴中之阳。因脏腑以固液态物质为根本，所以阴中之阴的脏为主。
 
-形体为阳，接受脏腑传输来的各种资源，进行使用消耗，像天，以六气划分，即厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。其中气态物质为阳中之阳，津血皮肉筋骨为阳中之阴。因形体以气态物质为主导，所以阳中之阳的气态物质为主。
+形体为阳，接受脏腑传输来的各种资源，进行使用消耗，像天，以六气划分，即厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。其中气态物质为阳中之阳，津血皮肉筋骨为阳中之阴。因形体以气态物质为主导，所以以阳中之阳的气态物质为主导，即经络通畅为关键。
+
+光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。
 
 以上只是粗略的介绍一下人体运转的基本原理和一些基本概念，下面我们要对精、气、神、血、津液等几种资源做更详细的叙述。
 
