--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -295,7 +295,7 @@
 
 ### 8、脑与神的关系：
 
-现代医学认为人的思维意识是脑的作用。中医也认为脑为元神之府，对精神活动很重要，但中医还认为脑的资源由脏腑提供，因此脏腑功能强健，脑的功能才能正常。脏腑功能衰弱，则脑的功能也下降。以肾藏志为例，志代表人的记忆力。肾的功能下降一段时间后，脑对应记忆的功能也会随之下降。其它脏腑也是如此。
+现代医学认为人的思维意识是脑的作用。中医也认为脑为元神之府，对精神活动很重要，但中医还认为脑的资源由脏腑提供，因此脏腑功能强健，脑的功能才能正常。每个脏腑对脑的对应功能有支持作用，如果某个脏腑功能衰弱，则对应脑的功能也下降。以肾藏志为例，志代表人的记忆力。肾的功能下降一段时间后，脑对应记忆的功能也会随之下降。其它脏腑也是如此。
 
 ### 9、资料：
 
