--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -158,7 +158,7 @@
 
 前述是单论内伤或者外感，如果人先有脏腑疾病，本身正气已不足，此时若再有外感侵袭，则极易由外而入里，形成严重问题。若伤及五脏，严重的话会有性命之忧。因此，人在平时就要保养脏腑，培养正气，以备特殊情况下能有足够的力量抵御各种异常侵袭。
 
-光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
+在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
 《伤寒论》既论述了健康人体外感风、寒之邪所形成的表病的特点和治法，也论述了原本有内伤病的人感受风寒之邪，病邪由表入里，表病转为里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
 
