--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -296,7 +296,7 @@
 
 我们要求中医学习者在了解寒热虚实、精神气血等基本概念后，必须掌握诊断的内容。起码对面色、脉诊、舌诊的内容要熟悉。如此，才能在精、神、气、血层面提前预知疾病的发生，而不必像普通人那样，等到疾病发展至形质变化阶段，影响了人体重要功能，才能重视并调理。
 
-初学者要注意诊断要全面，避免在重要方面发生漏诊。比如病人本有里虚，又有外感，如果只看到外感，未能发现里虚，只用了治疗外感的药，就可能造成里部虚上加虚，犯了虚虚之戒，有可能给病人造成严重伤害。系统学习中医的意义就是能够全面的看待人体，避免出现这种因医误病的情况。
+初学者要注意诊断要全面，避免在重要方面发生漏诊。比如病人本有里虚，又有外感，如果只看到外感，未能发现里虚，只用了治疗外感的方药。治疗外感的方药往往要调动里部气血走向表部，这样会造成里部虚上加虚，就犯了虚虚之戒，形成严重的里部失衡，有可能给病人造成严重伤害。系统学习中医的意义就是能够全面的看待人体，避免出现这种因医误病的情况。
 
 为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat) 。
 
