--- a/ok/bc/bc16-0.3.5.0.0.md
+++ b/ok/bc/bc16-0.3.5.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**百部功专润肺止咳，又善杀虫灭虱**。为百部料多年生草本植物直立百部、蔓生百部，或对叶百部的干燥块根。李时珍曰：其根多者百十连属，故以名之。取肥实者，入沸水烫至无白心，晒干切段。生用或蜜炙用。	
 
-本品味甘苦质润，性平。归肺经。功专润肺止咳，杀虫灭虱a。故用治多种咳嗽，无论新久，寒热咳嗽，以及百日咳等证，皆有疗效，尤宜于肺虚劳嗽与久咳之证。还能杀蛲虫、灭虱，对于蛲虫病及人体的头虱、体虱等，都有较强的杀灭力，此外，还可用无小儿疳积有虫，皮癣疥疮等证。
+本品味甘苦质润，性平。归肺经。功专润肺止咳，杀虫灭虱。故用治多种咳嗽，无论新久，寒热咳嗽，以及百日咳等证，皆有疗效，尤宜于肺虚劳嗽与久咳之证。还能杀蛲虫、灭虱，对于蛲虫病及人体的头虱、体虱等，都有较强的杀灭力，此外，还可用无小儿疳积有虫，皮癣疥疮等证。
 
 【临证应用】百部甘润苦降，性平不燥，为治咳嗽常用药。 治伤风咳嗽，可与荆芥、桔梗、紫菀同用，如止嗽散；治肺痨咳嗽，与麦冬、生地、山药配伍；治百日咳，多与沙参、川贝、白前等配用。
 
