--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -80,11 +80,7 @@
 
 卫气行于经络之中，血脉之外。
 
-白天走手足三阳经二十五周。
-
-晚上走脏器二十五周，顺序是肾、心、肺、肝、脾、肾
-
-卫气的循行与睡眠有着密切关系。
+一部分卫气在白天和夜晚的时候走不同的路径，白天走手足三阳经二十五周；晚上走脏器二十五周，顺序是肾、心、肺、肝、脾、肾。因此，卫气的循行与睡眠有着密切关系。
 
 > 本篇下文指出，卫气一日一夜，循行五十周次，白天行于阳分二十五周，夜间行于阴分二十五周。
 >
