--- a/ok/bc/bc16-0.2.13.0.0.md
+++ b/ok/bc/bc16-0.2.13.0.0.md
@@ -1,6 +1,6 @@
 ### 海藻
 
-**〔原文〕咸润下而软坚，寒行水以泄热。故消瘿瘤结核阴㿉**(1)**之坚聚**，腹痛曰疝：丸痛曰㿉，音颓。 **痰饮脚气水肿之湿热，消宿食，治五膈。出东海有大叶马尾二种，亦作海菜食，洗去咸水用**。昂按：其用在咸，似不宜过洗。**反甘草**。东垣治瘰疬马刀，海藻甘草并用，盖激之以溃坚也。	
+**〔原文〕咸润下而软坚，寒行水以泄热。故消瘿瘤结核阴㿉**(1)**之坚聚**，<small>腹痛曰疝：丸痛曰㿉，音颓。</small> **痰饮脚气水肿之湿热，消宿食，治五膈。出东海有大叶马尾二种，亦作海菜食，洗去咸水用**。<small>昂按：其用在咸，似不宜过洗。</small>**反甘草**。<small>东垣治瘰疬马刀，海藻甘草并用，盖激之以溃坚也。</small>
 
 **海带，下水消癭，功同海藻。似海藻而粗，柔弱而长**。
 
