--- a/ok/bc/bc16-0.2.16.0.0.md
+++ b/ok/bc/bc16-0.2.16.0.0.md
@@ -1,6 +1,6 @@
 ### 荸 荠
 
-**〔原文〕甘微寒滑。益气安中，开胃消食**， 饭后宜食之。**除胸中实热，治五种噎膈**，五膈：忧膈、恚 隔、气膈、热膈、寒膈。噎亦五种：气噎、食噎、劳噎、忧噎、思噎。**消渴黄疸，血证蛊毒**。末服，辟蛊。**能毁铜**。汪机曰：食铜钱，食之则钱化。可见为消坚削积之物，故能开五膈，消宿食，治误吞铜也。
+**〔原文〕甘微寒滑。益气安中，开胃消食**， <small>饭后宜食之。</small>**除胸中实热，治五种噎膈**，<small>五膈：忧膈、恚 隔、气膈、热膈、寒膈。噎亦五种：气噎、食噎、劳噎、忧噎、思噎。</small>**消渴黄疸，血证蛊毒**。<small>末服，辟蛊。</small>**能毁铜**。<small>汪机曰：食铜钱，食之则钱化。可见为消坚削积之物，故能开五膈，消宿食，治误吞铜也。</small>
 
 【讲解】**荸芥有清热化痰消积之功。**为莎草科多年生水生草本植物荸荠的球茎。凫芘之名，出于《尔雅》，乌芋之名，出于《广雅》，地栗之名，出于《通志》。以上之名，部分地区尚还匀用。主鲜用，捣汁服。
 
