--- a/ok/bc/bc16-0.2.17.0.0.md
+++ b/ok/bc/bc16-0.2.17.0.0.md
@@ -1,6 +1,6 @@
 ### 荠苨
 
-**〔原文〕寒利肺，甘解毒**。 能解百药及蛇蛊毒， 在诸药中，毒皆自解。**和中止嗽，治消渴强中**，渴证下消， 茎长兴盛，不交精出，名强中。消渴之后，发为痈疽。**痈肿疔毒**。**如人参而体虚无心，似桔梗而味甘不苦**。奸贾多用以乱人参。李时珍曰：荠苨即甜桔梗。
+**〔原文〕寒利肺，甘解毒**。<small> 能解百药及蛇蛊毒， 在诸药中，毒皆自解。</small>**和中止嗽，治消渴强中**，<small>渴证下消， 茎长兴盛，不交精出，名强中。消渴之后，发为痈疽。</small>**痈肿疔毒**。**如人参而体虚无心，似桔梗而味甘不苦**。<small>奸贾多用以乱人参。李时珍曰：荠苨即甜桔梗。</small>
 
 【讲解】**荠苨是清肺、化痰、解毒之品**。为桔梗科多年生草本植物荠苨的根。其根形似人参而体虚中空，故有荠苨乱人参之弊。而苗似桔梗，但味甘不苦，故时珍又谓其甜桔梗。
 
