--- a/ok/bc/bc16-0.2.18.0.0.md
+++ b/ok/bc/bc16-0.2.18.0.0.md
@@ -1,6 +1,6 @@
 ### 胡桐泪
 
-**〔原文〕苦能杀虫，咸能入骨软坚，大寒能除热。治咽喉热痛**，磨扫取涎。**齿䘌风疳，瘰疬结核**。苏颂曰：古方稀用，今口齿家，多用为要药。**出凉肃。乃胡桐脂，入土得斥卤之气结成，如小石片，木泪状如膏油**。
+**〔原文〕苦能杀虫，咸能入骨软坚，大寒能除热。治咽喉热痛**，<small>磨扫取涎。</small>**齿䘌风疳，瘰疬结核**。<small>苏颂曰：古方稀用，今口齿家，多用为要药。</small>**出凉肃。乃胡桐脂，入土得斥卤之气结成，如小石片，木泪状如膏油**。
 
 【讲解】**胡桐泪功专清热化痰软坚**。为杨柳科乔木植物胡杨(又名胡桐）的树脂，在土中留存多年而成。生用。胡桐分布于内蒙古西部、甘肃、青海、新疆等地。
 
