--- a/ok/bc/bc16-0.2.15.0.0.md
+++ b/ok/bc/bc16-0.2.15.0.0.md
@@ -1,6 +1,6 @@
 ###  胖大海
 
-**〔原文〕味甘微涩、平微凉，润肺化痰止嗽，治嗽痰肺热**。一名大洞子，一名安南子。
+**〔原文〕味甘微涩、平微凉，润肺化痰止嗽，治嗽痰肺热**。<small>一名大洞子，一名安南子。</small>
 
 【讲解】**胖大海具有清热润肺、利咽通便之功**。为梧桐科落叶乔木植物胖大海的成熟种子。于夏初由开裂的果实上采取成熟种子。晒干，生用。 
 
