--- a/ok/bc/bc16-0.3.3.0.0.md
+++ b/ok/bc/bc16-0.3.3.0.0.md
@@ -1,6 +1,6 @@
 ### 紫菀
 
-**〔原文〕辛温润肺，舌温下气。补虚调中，消痰止渴。治寒热结气，咳逆上气，咳吐脓血**，专治血痰，为血劳圣药。**肺经虚热，小儿惊痫**。亦虚而有热。**能开喉痹取恶涎、然辛散性滑，不宜多用独用**。《本草汇》曰：苦能达下,辛能益金，故吐血保肺，收为上剂。虽入至高善于达下，使气化于州都，小便自利，人所不知。李士材曰：辛而不燥，润而不寒，补而不滞，诚金玉君子，非多用独用，不能速效。州都，膀胱也。**根作节，紫色润软者良**。人多以车前、旋覆根伪之，误服误人。**去头须，蜜水浸，焙用。款冬为使。恶天雄、 瞿麦、藁本、远志。畏茵陈。白者名女菀**。李时珍曰：紫入血分、白入气分。
+**〔原文〕辛温润肺，舌温下气。补虚调中，消痰止渴。治寒热结气，咳逆上气，咳吐脓血**，<small>专治血痰，为血劳圣药。</small>**肺经虚热，小儿惊痫**。<small>亦虚而有热。</small>**能开喉痹取恶涎、然辛散性滑，不宜多用独用**。<small>《本草汇》曰：苦能达下,辛能益金，故吐血保肺，收为上剂。虽入至高善于达下，使气化于州都，小便自利，人所不知。李士材曰：辛而不燥，润而不寒，补而不滞，诚金玉君子，非多用独用，不能速效。州都，膀胱也。</small>**根作节，紫色润软者良**。<small>人多以车前、旋覆根伪之，误服误人。</small>**去头须，蜜水浸，焙用。款冬为使。恶天雄、 瞿麦、藁本、远志。畏茵陈。白者名女菀**。<small>李时珍曰：紫入血分、白入气分。</small>
 
 【讲解】**紫菀为化痰止咳之要药**。为菊科多年生草本植物紫菀的根及根茎。《备要》谓：“根作节，紫色润软者良。”指干燥根茎节丛虽须根，细长而柔软，不易折断，外面色紫，有细纵皱。 秋季采收，晒干切段。生用或蜜炙用。	
 
