--- a/ok/bc/bc16-0.3.5.0.0.md
+++ b/ok/bc/bc16-0.3.5.0.0.md
@@ -1,6 +1,6 @@
 ### 百 部
 
-**〔原文〕甘苦微温。能润肺，治肺热咳嗽**。苦能泻热， **有小毒，杀？、蛲、蝇、虱，一切树木蛀虫**。触烟即死。**治骨蒸传尸，疳积疥癣**。皆有虫。李时珍曰：百部亦天冬之类，故皆治肺而杀虫。但天冬寒，热嗽宜之，百部温，寒嗽宜之。**根多成百故多。取肥实者，竹刀劈去心皮，酒浸焙用**。
+**〔原文〕甘苦微温。能润肺，治肺热咳嗽**。<small>苦能泻热，</small> **有小毒，杀蚘、蛲、蝇、虱，一切树木蛀虫**。<small>触烟即死。<small>**治骨蒸传尸，疳积疥癣**。<small>皆有虫。李时珍曰：百部亦天冬之类，故皆治肺而杀虫。但天冬寒，热嗽宜之，百部温，寒嗽宜之。</small>**根多成百故多。取肥实者，竹刀劈去心皮，酒浸焙用**。
 
 【讲解】**百部功专润肺止咳，又善杀虫灭虱**。为百部料多年生草本植物直立百部、蔓生百部，或对叶百部的干燥块根。李时珍曰：其根多者百十连属，故以名之。取肥实者，入沸水烫至无白心，晒干切段。生用或蜜炙用。	
 
