--- a/ok/bc/bc16-0.3.8.0.0.md
+++ b/ok/bc/bc16-0.3.8.0.0.md
@@ -1,6 +1,6 @@
 ### 马兜铃
 
-**〔原文〕体轻而虚，熟则四开象肺，故入肺。寒能清肺热，苦辛能降肺气**。李时珍曰：钱乙补肺阿胶汤用之，非取其补肺，取其清热降气，则肺自安也。其中阿胶、糯米，乃补肺之正药。昂按：清热降气，泻之即所以补之。若专一于补，适以助火而益嗽也。**治痰嗽喘促，血痔**（1）**瘘疮，大肠经热**，瘘，漏也，音闾，亦音漏。痔属大肠，大肠与肺为表里，肺移热于大肠，故脑风痔瘘，清脏热则腑热茚清矣。《千余》单服治水肿，以能泻肺行水也。**亦可 吐蛊**。汤剂中用之，**多作吐。蔓生，实如铃，去筋膜，取子用**。	
+**〔原文〕体轻而虚，熟则四开象肺，故入肺。寒能清肺热，苦辛能降肺气**。<small>李时珍曰：钱乙补肺阿胶汤用之，非取其补肺，取其清热降气，则肺自安也。其中阿胶、糯米，乃补肺之正药。昂按：清热降气，泻之即所以补之。若专一于补，适以助火而益嗽也。</small>**治痰嗽喘促，血痔**（1）**瘘疮，大肠经热**，<small>瘘，漏也，音闾，亦音漏。痔属大肠，大肠与肺为表里，肺移热于大肠，故脑风痔瘘，清脏热则腑热茚清矣。《千余》单服治水肿，以能泻肺行水也。</small>**亦可 吐蛊**。<small>汤剂中用之，多作吐。</small>**蔓生，实如铃，去筋膜，取子用**。	
 
 【讲解】 (1)血痔：肛门生痔，有小肉突起，伴有出血、 疼痛等证。
 
