--- a/ok/bc/bc16-0.3.9.0.0.md
+++ b/ok/bc/bc16-0.3.9.0.0.md
@@ -1,6 +1,6 @@
 ### 枇杷叶
 
-**〔原文〕苦平。清肺和胃而降气，气下则火降痰消**。气有余便是火，火则生痰。**治热咳呕逆口渴**。李时珍 曰：火降痰顺，则逆者不逆，呕者不呕，咳者不咳，渴者不渴矣。一妇肺热久嗽，身如火炙，肌瘦将成劳，以枇杷叶、款冬花、紫菀、杏仁、桑皮、木通等分，大黄减半，蜜丸樱桃大，食后夜卧，各含化一丸，未终剂而愈。**叶湿重一两，干重三钱为气足。拭净毛**，毛射肺令人咳。 **治胃病姜汁炙，治肺病蜜炙**。
+**〔原文〕苦平。清肺和胃而降气，气下则火降痰消**。<small>气有余便是火，火则生痰。</small>**治热咳呕逆口渴**。<small>李时珍 曰：火降痰顺，则逆者不逆，呕者不呕，咳者不咳，渴者不渴矣。一妇肺热久嗽，身如火炙，肌瘦将成劳，以枇杷叶、款冬花、紫菀、杏仁、桑皮、木通等分，大黄减半，蜜丸樱桃大，食后夜卧，各含化一丸，未终剂而愈。</small>**叶湿重一两，干重三钱为气足。拭净毛**，<small>毛射肺令人咳。</small> **治胃病姜汁炙，治肺病蜜炙**。
 
 【讲解】**枇杷叶性偏寒降，以清肺止咳，和胃降逆为其主要功效**。为蔷薇科常绿小乔木植物枇杷的叶。叶片刷去背面的毛绒，洗净晒干、切碎生用，或蜜炙用。
 
