--- a/ok/bc/bc16-0.3.6.0.0.md
+++ b/ok/bc/bc16-0.3.6.0.0.md
@@ -1,6 +1,6 @@
 ### 桑白皮
 
-**〔原文〕甘辛而寒。泻肺火**，罗谦甫曰：是泻肺中火邪，非泻肺气也。火与元气不两立，火去则气得安矣。故《本经》文云益气。 李东垣曰：甘固元气之不足而补虚，辛泻肺气之有余而止嗽。然性不纯良， 不宜多用。钱乙泻白散：桑皮、地骨各一两，甘草五钱，每服二钱，入粳米百粒煎。李时珍曰：桑皮、地骨，皆能泻火从小便出，甘草泻火缓中，粳米清肺养血，乃泻肺诸方之准绳也，一妇鼻久不闻香臭，后因他疾，缪仲醇为处方，每服桑皮至七八钱，服久则鼻塞忽通。 **利二便，散瘀血，下气行水，止嗽清痰**。《发明》曰：肺中有火，则生痰而作嗽，除水气正所以泻火邪，实则泻其子也，火退气宁，则补益在其中矣。《十剂》曰: 燥可去湿，桑白皮、赤小豆之类是也。**治肺热喘满，唾血热渴， 水肿胪胀。肺气虚及风寒作嗽者慎用。为线可缝金疮，刮去外皮取白用**。如恐其泻气，用蜜灰之。**续断、桂心为使。忌铁**。
+**〔原文〕甘辛而寒。泻肺火**，<small>罗谦甫曰：是泻肺中火邪，非泻肺气也。火与元气不两立，火去则气得安矣。故《本经》文云益气。 李东垣曰：甘固元气之不足而补虚，辛泻肺气之有余而止嗽。然性不纯良， 不宜多用。钱乙泻白散：桑皮、地骨各一两，甘草五钱，每服二钱，入粳米百粒煎。李时珍曰：桑皮、地骨，皆能泻火从小便出，甘草泻火缓中，粳米清肺养血，乃泻肺诸方之准绳也，一妇鼻久不闻香臭，后因他疾，缪仲醇为处方，每服桑皮至七八钱，服久则鼻塞忽通。</small> **利二便，散瘀血，下气行水，止嗽清痰**。<small>《发明》曰：肺中有火，则生痰而作嗽，除水气正所以泻火邪，实则泻其子也，火退气宁，则补益在其中矣。《十剂》曰: 燥可去湿，桑白皮、赤小豆之类是也。</small>**治肺热喘满，唾血热渴， 水肿胪胀。肺气虚及风寒作嗽者慎用。为线可缝金疮，刮去外皮取白用**。<small>如恐其泻气，用蜜灸之。</small>**续断、桂心为使。忌铁**。
 
 【讲解】**桑白皮泻肺平喘，行水消肿**。为桑科小乔木桑树除去栓皮的根皮。洗净晒干，切段，生用或蜜炙用。
 
