--- a/ok/bc/bc16-0.3.7.0.0.md
+++ b/ok/bc/bc16-0.3.7.0.0.md
@@ -1,6 +1,6 @@
 ### 葶苈子 （1）
 
-**〔原文〕辛苦大寒，属火性急。大能下气， 行膀胱水。肺中水气？急**（2）**者**，**非此不能除。破积聚？结，伏留热气，消肿除痰，止嗽平喘，水湿泛滥，为肿胀，为痰嗽，为喘满。通经利便。久服令人虚**。《十剂》曰：泄可去闭，葶苈、大黄之属是也，大黄泄阴分血闭， 葶苈泄阳分气闭，气味俱厚，不减大黄。然有甜苦二种，甜者性缓，苦者性急，泄肺而伤胃，宜大枣辅之。仲景有葶苈大枣泻肺汤，治肺气喘急不得卧。 昂按：辅以大枣，补土所以制水。**子如黍米，微长色黄。合糟米微炒，去米用。得酒良。榆皮为使**。
+**〔原文〕辛苦大寒，属火性急。大能下气， 行膀胱水。肺中水气膹急**（2）**者**，**非此不能除。破积聚？结，伏留热气，消肿除痰，止嗽平喘，水湿泛滥，为肿胀，为痰嗽，为喘满。通经利便。久服令人虚**。<small>《十剂》曰：泄可去闭，葶苈、大黄之属是也，大黄泄阴分血闭， 葶苈泄阳分气闭，气味俱厚，不减大黄。然有甜苦二种，甜者性缓，苦者性急，泄肺而伤胃，宜大枣辅之。仲景有葶苈大枣泻肺汤，治肺气喘急不得卧。 昂按：辅以大枣，补土所以制水。</small>**子如黍米，微长色黄。合糟米微炒，去米用。得酒良。榆皮为使**。
 
 【讲解】（1)子：原无，据《本草纲目》补。（2)膹急： 胸中满闷喘促。
 
