--- a/ok/bc/bc15-0.0.2.0.0.md
+++ b/ok/bc/bc15-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 槟榔
 
-​      【原文】  **苦温破滞**，**辛温散邪**，**泻胸中至高之气使之下行；性如铁石，能坠诸药至于极下。攻坚*****去胀，消食行痰，下水除风，杀虫醒酒。治痰癖癥结，瘴疠(1) 疟痢，水肿脚气**。脚气冲心，尤须用之，童便姜汁温酒调服。**治大小便气秘， 里急后重**。同木香用，木香能利气。**过服则损真气**。岭南多瘴，以槟榔代茶，其功有四：醒能使醉，醉能使醒；饥能使饱，饱能使饥。然泄脏气，无瘴之地忌用。**鸡心尖长，破之作锦纹者良**。程星海曰：阴毛生虱，世鲜良方，以槟榔煎水洗即除。又方，以心红擦之亦好。
+​      【原文】  **苦温破滞**，**辛温散邪**，**泻胸中至高之气使之下行；性如铁石，能坠诸药至于极下。攻坚*****去胀，消食行痰，下水除风，杀虫醒酒。治痰癖癥结，瘴疠(1) 疟痢，水肿脚气**。<small>脚气冲心，尤须用之，童便姜汁温酒调服。</small>**治大小便气秘， 里急后重**。<small>同木香用，木香能利气。</small>**过服则损真气**。<small>岭南多瘴，以槟榔代茶，其功有四：醒能使醉，醉能使醒；饥能使饱，饱能使饥。然泄脏气，无瘴之地忌用。</small>**鸡心尖长，破之作锦纹者良**。<small>程星海曰：阴毛生虱，世鲜良方，以槟榔煎水洗即除。又方，以心红擦之亦好。</small>
 
 ​      【讲解】   (1) 瘴疠：指感受湿热杂毒而致疫疠的一种。
 
