--- a/ok/bc/bc15-0.0.4.0.0.md
+++ b/ok/bc/bc15-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 鹤虱
 
-​     【原文】   **苦辛有小毒，杀五脏虫。治蚘囓腹痛**。面白唇红，时发时止者，为虫痛，肥肉汁调末服。**沈存中《笔记》曰：是土牛膝子**。或曰非也，别是一种。**最粘人衣。有狐气。炒热则香**。
+​     【原文】   **苦辛有小毒，杀五脏虫。治蚘囓腹痛**。<small>面白唇红，时发时止者，为虫痛，肥肉汁调末服。</small>**沈存中《笔记》曰：是土牛膝子**。<small>或曰非也，别是一种。</small>**最粘人衣。有狐气。炒热则香**。
 
 ​     【讲解】    **鹤虱的功效，以驱蛔虫、蛲虫为主**。为菊科多年生草本植物天名精，或伞形科二年生草本植物野胡萝卜的干燥成熟果实。种仁黄白色、有油性，尝之有粘性。生用；或炒用。天名精主产于华北各地，称北鹤虱，为本草书籍所记的正品；野胡罗卜产于浙江、安徽、四川、江苏等地，商品称南鹤虱。
 
