--- a/ok/bc/bc15-0.0.5.0.0.md
+++ b/ok/bc/bc15-0.0.5.0.0.md
@@ -1,6 +1,6 @@
 ### 芜荑
 
-​     【原文】    **辛散满，苦杀虫，温燥湿化食**。诸虫皆因湿而生，气食皆因寒而滞。**祛五脏皮肤肢节风湿， 心腹积冷，癥痛鳖瘕**。 《直指方》曰：嗜酒人血入于酒为酒鳖；多气人血入于气为气鳖；虚劳人败血杂痰为血鳖。如虫之行，上侵人咽，下蚀人肛，或附肋背，或隐胸腹，惟用炒芜荑，兼暖胃理气益血之药，乃可杀之。**痔瘘疮癣，小儿惊疳冷痢**。得诃子、豆寇良。**胃中有虫，食即作痛**。和面炒黄为末，米饮下。形类榆荚，**陈久气羶者良**。
+​     【原文】    **辛散满，苦杀虫，温燥湿化食**。<small>诸虫皆因湿而生，气食皆因寒而滞。</small>**祛五脏皮肤肢节风湿， 心腹积冷，癥痛鳖瘕**。 <small>《直指方》曰：嗜酒人血入于酒为酒鳖；多气人血入于气为气鳖；虚劳人败血杂痰为血鳖。如虫之行，上侵人咽，下蚀人肛，或附肋背，或隐胸腹，惟用炒芜荑，兼暖胃理气益血之药，乃可杀之。</small>**痔瘘疮癣，小儿惊疳冷痢**。<small>得诃子、豆寇良。</small>**胃中有虫，食即作痛**。<small>和面炒黄为末，米饮下。</small>**形类榆荚，陈久气羶者良**。
 
 ​      【讲解】      **芜荚功能杀虫消积，尤以杀蛔虫见长**。为榆科落叶小乔木或灌木植物大果榆果实的加工品。其加工制品为扁平方形块状，质松，呈赤褐色，夹有残存的果皮和枝叶破片，并有触鼻之恶臊味。切成小块晒干人药。
 
