--- a/ok/bc/bc15-0.0.6.0.0.md
+++ b/ok/bc/bc15-0.0.6.0.0.md
@@ -1,6 +1,6 @@
 ### 榧实
 
-​       【原文】     **甘涩。润肺**。本草未尝言润，然润剂也，故寇氏曰：多食润肠。杀虫。 有虫积者，宜上旬日日食之，食一斤· 虫乃绝。
+​       【原文】     **甘涩。润肺**。<small>本草未尝言润，然润剂也，故寇氏曰：多食润肠。杀虫。 有虫积者，宜上旬日日食之，食一斤， 虫乃绝。</small>
 
 ​      【讲解】   **榧实可驱杀多种肠寄生虫，井有缓泻作用，是比较有效而又安全的驱虫药**。为红豆杉科常绿乔木植物榧树的成熟种子。《别录》原名榧实，一般称为榧子。生用，或炒用。
 
