--- a/ok/bc/bc15-0.0.7.0.0.md
+++ b/ok/bc/bc15-0.0.7.0.0.md
@@ -1,8 +1,6 @@
 ### 贯众
 
-​         【原文】   **味苦微寒有毒，而能解邪热之毒。治崩中带下，产后血气胀痛，破癥瘕，发斑痘**。王
-
-海藏快斑散用之。**化骨鲠**，能软坚。**杀三虫。根似狗脊而大。汁能制三黄，化五金，伏钟乳结砂制汞，觯毒软坚**。以此浸水缸中，日饮其水，能辟时疾。
+​         【原文】   **味苦微寒有毒，而能解邪热之毒。治崩中带下，产后血气胀痛，破癥瘕，发斑痘**。<small>王海藏快斑散用之。</small>**化骨鲠**，<small>能软坚。</small>**杀三虫。根似狗脊而大。汁能制三黄，化五金，伏钟乳结砂制汞，觯毒软坚**。<small>以此浸水缸中，日饮其水，能辟时疾。</small>
 
 ​      【讲解】    **贯众有杀虫之功，兼能清热解毒，止血**。为鳞毛蕨科多年生草本植物粗茎鳞毛蕨；蹄盖蕨科多年生草本植物蛾眉蕨；乌毛蕨科多年生草本植物单芽狗脊；紫萁科多年生草本植物紫萁的根茎及叶柄某部。又名贯仲。生用，或炒炭用。
 
