--- a/ok/bc/bc15-0.0.3.0.0.md
+++ b/ok/bc/bc15-0.0.3.0.0.md
@@ -1,6 +1,6 @@
 ### 雷丸
 
-​       【原文】    **苦寒有小毒。入胃、大肠经。功专消积杀虫**。杨勔得异疾，每发语，腹中有小声应之，久渐声大。有道士曰：此应声虫也。但读本草，取不应者治之。读至雷丸不应，服之而愈。**竹之余气，得霹雳而生，故名。大小如栗，竹刀刮去黑皮，甘草水浸一宿。酒拌蒸，或炮用。厚朴、芫花为使。恶葛根**。
+​       【原文】    **苦寒有小毒。入胃、大肠经。功专消积杀虫**。<small>杨勔得异疾，每发语，腹中有小声应之，久渐声大。有道士曰：此应声虫也。但读本草，取不应者治之。读至雷丸不应，服之而愈。</small>**竹之余气，得霹雳而生，故名。大小如栗，竹刀刮去黑皮，甘草水浸一宿。酒拌蒸，或炮用。厚朴、芫花为使。恶葛根**。
 
 ​      【讲解】  **雷丸以驱杀绦虫为主，兼驱钩虫、蛔虫。**为多孔菌科雷丸菌的菌核，多寄生于竹的枯根上，呈不规则的圆块，大小如栗，质坚色黑灰。洗净晒干，生用。
 
