--- a/ok/bc/bc15-0.0.8.0.0.md
+++ b/ok/bc/bc15-0.0.8.0.0.md
@@ -1,6 +1,6 @@
 ### 大蒜
 
-​      【原文】   **辛温，开胃健脾，通五脏，达诸窍**。凡极臭极香之物，皆能通窍。**去寒湿，解暑气，辟瘟疫，消痈肿**。捣烂麻油调敖敷。**破癥积，化肉食，杀蛇虫蛊毒，治中暑不醒**，捣和地浆温服。**鼻衄不止**，捣帖足心，能引热下行。**关格不通**，捣纳肛中，能通幽门。**敷脐能达下焦， 消水利大小便，切片灼艾灸**，音九。**一切痈疽恶疮肿核，独头者尤良**。李迅曰： 痈疽著灸，胜于用药，缘热毒中隔，上下不通，必得毒气发泄，然后解散，初起便用独头大蒜，切片灸之，三壮一易，百壮为率，但头顶以上，切不可灸，恐引气上，更生大祸也。史源曰：有灸至八百壮者，约艾一筛，初坏肉不痛，直灸到好肉方痛，至夜火焮满背高阜，头孔百数，则毒外出，否则内逼五脏而危矣。《纲目》曰：《精要》谓头上毒不得灸。此言过矣，头为诸阳所聚，艾宜小如椒粒，灸宜三五壮而已。又按李东垣灸元好问脑疽，艾大如两核许，灸至百壮，始觉痛而痊。由是推之，头毒若不痛者，艾大壮多，亦无妨也。**然其气熏臭， 多食生痰动火，散气耗血，损目伤神**。五荤皆然，而蒜尤甚。楞严经曰：五荤熟食发淫，生啖增恚，故释氏戒之。释家以大蒜、小蒜、兴渠、慈葱、茖葱为五荤；慈葱，冬葱也；茖葱，山葱也；兴渠，西域菜，云即中国之荽，道家以韭、薤、蒜、胡荽、芸苔为五荤。芸苔，油菜也。**忌蜜**。
+​      【原文】   **辛温，开胃健脾，通五脏，达诸窍**。<small>凡极臭极香之物，皆能通窍。</small>**去寒湿，解暑气，辟瘟疫，消痈肿**。<small>捣烂麻油调敖敷。</small>**破癥积，化肉食，杀蛇虫蛊毒，治中暑不醒**，<small>捣和地浆温服。</small>**鼻衄不止**，<small>捣帖足心，能引热下行。</small>**关格不通**，<small>捣纳肛中，能通幽门。</small>**敷脐能达下焦， 消水利大小便，切片灼艾灸**，<small>音九。</small>**一切痈疽恶疮肿核，独头者尤良**。<small>李迅曰： 痈疽著灸，胜于用药，缘热毒中隔，上下不通，必得毒气发泄，然后解散，初起便用独头大蒜，切片灸之，三壮一易，百壮为率，但头顶以上，切不可灸，恐引气上，更生大祸也。史源曰：有灸至八百壮者，约艾一筛，初坏肉不痛，直灸到好肉方痛，至夜火焮满背高阜，头孔百数，则毒外出，否则内逼五脏而危矣。《纲目》曰：《精要》谓头上毒不得灸。此言过矣，头为诸阳所聚，艾宜小如椒粒，灸宜三五壮而已。又按李东垣灸元好问脑疽，艾大如两核许，灸至百壮，始觉痛而痊。由是推之，头毒若不痛者，艾大壮多，亦无妨也。</small>**然其气熏臭， 多食生痰动火，散气耗血，损目伤神**。<small>五荤皆然，而蒜尤甚。楞严经曰：五荤熟食发淫，生啖增恚，故释氏戒之。释家以大蒜、小蒜、兴渠、慈葱、茖葱为五荤；慈葱，冬葱也；茖葱，山葱也；兴渠，西域菜，云即中国之荽，道家以韭、薤、蒜、胡荽、芸苔为五荤。芸苔，油菜也。</small>**忌蜜**。
 
 ​     【讲解】 **大蒜功专杀虫解毒，外用还有消痈疗疮之功**。为百合科多年生草本植物大蒜的鳞茎。晾干人药。
 
