--- a/ok/bc/bc16-0.1.2.0.0.md
+++ b/ok/bc/bc16-0.1.2.0.0.md
@@ -1,6 +1,6 @@
 ### 天南星
 
-**〔原文〕味辛而苦，能治风散血**， 《是斋方》: 南星、防风等分为末，名玉真散，治破伤风，刀伤扑伤如神。破伤风者，药敷疮口，温酒调下二钱。打伤至死，童便调灌二钱，连进三服必活。**气温而燥，能胜湿除痰；性紧而毒，能攻积拔毒。补肝风虚**，凡味辛而散者，皆能补肝，木喜条达故也。**为肝脾脉三经之要药。治惊痫风眩**， 朱丹溪曰：无痰不作眩。**身强口噤， 喉痹舌疮，结核疝瘕，痈毒疥癣，蛇虫蛟毒**。调末箍之。**破结下气，利水堕胎，性更烈于半夏**。与半夏皆燥而毒，故堕胎。半夏辛而能守，南星辛而不守，然古安胎方中，亦有用半夏者。**阴虚燥痰禁用。根似半夏而大，形如虎掌，故一名虎掌。以矾汤或皂角汁浸三昼夜曝用；或酒浸一宿蒸，竹刀切开，至不麻为止；或姜渣黄泥和包煨熟用。造曲法与半夏同。造胆星法：腊月取黄牛胆汁，和南星末纳入胆中，风干，年久者弥佳。畏附子、干姜、防风**。得防风则不麻，火炮则毒性缓；得牛胆则本燥， 且胆有益肝胆之功。此治风痰主药。
+**〔原文〕味辛而苦，能治风散血**，<small> 《是斋方》: 南星、防风等分为末，名玉真散，治破伤风，刀伤扑伤如神。破伤风者，药敷疮口，温酒调下二钱。打伤至死，童便调灌二钱，连进三服必活。</small>**气温而燥，能胜湿除痰；性紧而毒，能攻积拔毒。补肝风虚**，<small>凡味辛而散者，皆能补肝，木喜条达故也。</small>**为肝脾脉三经之要药。治惊痫风眩**， <small>朱丹溪曰：无痰不作眩。</small>**身强口噤， 喉痹舌疮，结核疝瘕，痈毒疥癣，蛇虫蛟毒**。<small>调末箍之。</small>**破结下气，利水堕胎，性更烈于半夏**。<small>与半夏皆燥而毒，故堕胎。半夏辛而能守，南星辛而不守，然古安胎方中，亦有用半夏者。</small>**阴虚燥痰禁用。根似半夏而大，形如虎掌，故一名虎掌。以矾汤或皂角汁浸三昼夜曝用；或酒浸一宿蒸，竹刀切开，至不麻为止；或姜渣黄泥和包煨熟用。造曲法与半夏同。造胆星法：腊月取黄牛胆汁，和南星末纳入胆中，风干，年久者弥佳。畏附子、干姜、防风**。<small>得防风则不麻，火炮则毒性缓；得牛胆则本燥， 且胆有益肝胆之功。此治风痰主药。</small>
 
 【讲解】**天南星燥湿化痰，祛风解痉，专走经络，为开涤风痰之专药**。为天南星科多年生草本植物天南星，东北天南星或异叶天南星的干燥块茎。原名“虎掌”，《新修本草》谓：“其根四畔有圆牙，看如虎掌，故有此名。”
 
