--- a/ok/bc/bc16-0.1.3.0.0.md
+++ b/ok/bc/bc16-0.1.3.0.0.md
@@ -1,6 +1,6 @@
 ### 白附子
 
-**〔原文〕辛甘有毒，大热纯阳。阳明经药，能引药势上行，治面上百病**。阳明之脉营于面，白附能去头游风，作面脂，消斑疵。**补肝虚，祛风痰。治心痛血痹，诸风冷气，中风失音，阴下湿痒。根如草乌之小者，长寸许，皱纹有节。炮用**。陶弘景日：此药之绝，无复真者。今惟凉州生。	
+**〔原文〕辛甘有毒，大热纯阳。阳明经药，能引药势上行，治面上百病**。<small>阳明之脉营于面，白附能去头游风，作面脂，消斑疵。</small>**补肝虚，祛风痰。治心痛血痹，诸风冷气，中风失音，阴下湿痒。根如草乌之小者，长寸许，皱纹有节。炮用**。<small>陶弘景日：此药之绝，无复真者。今惟凉州生。</small>
 
 【讲解】**白附子燥烈有毒，为祛风痰要药**。为天南星科多年生草本植物独角莲的茎块（禹白附)。用硫黄熏1—2次，晒干用；或用白矾、生姜制后，切片用。少数地区使用的白附子为毛茛科草本植物黄花乌头的块根(关白附)。
 
