--- a/ok/bc/bc16-0.1.4.0.0.md
+++ b/ok/bc/bc16-0.1.4.0.0.md
@@ -1,7 +1,7 @@
 ### 白芥子
 
-**〔原文〕辛温入肺。通行经络，温中开胃， 发汗散寒，利气豁痰，消肿止痛**。痰行则肿消，气行则痛 止。为末醋调敷，消痈肿。**治咳嗽反胃，痹木脚气、筋骨诸病**。痰阻气滞。**久嗽肺虚人禁用**。朱丹溪日：痰在胁下及皮里
-膜外，非此不能达行。古方控涎丹用之，正此义。韩？三子养亲汤，白芥子主痰，下气宽中；紫苏子主气，定喘止嗽；莱菔子主食，开痞降气，各微炒研，看病所主为君，治老人痰嗽喘满懒食。**北产者良。煎汤不可过熟，熟则力减**。
+**〔原文〕辛温入肺。通行经络，温中开胃， 发汗散寒，利气豁痰，消肿止痛**。<small>痰行则肿消，气行则痛止。为末醋调敷，消痈肿。</small>**治咳嗽反胃，痹木脚气、筋骨诸病**。<small>痰阻气滞。</small>**久嗽肺虚人禁用**。<small>朱丹溪日：痰在胁下及皮里
+膜外，非此不能达行。古方控涎丹用之，正此义。韩懋三子养亲汤，白芥子主痰，下气宽中；紫苏子主气，定喘止嗽；莱菔子主食，开痞降气，各微炒研，看病所主为君，治老人痰嗽喘满懒食。</small>**北产者良。煎汤不可过熟，熟则力减**。
 
 **芥菜子豁痰利气，主治略同。**
 
