--- a/ok/bc/bc16-0.1.5.0.0.md
+++ b/ok/bc/bc16-0.1.5.0.0.md
@@ -1,6 +1,6 @@
 ### 旋覆花
 
-**〔原文〕咸能软坚，苦辛能下气行水，温能通血脉。入肺、大肠经。消痰结坚痞，唾如胶漆， 噫气**（1）**不除**，噫，于介切，俗作嗳，胸中气不畅，故暧以通之，属不足。亦有挟痰挟火者，属有余。仲景治汗吐下后，痞硬噫气，有旋覆代赭汤（1），**大肠水肿，去头目风。然走散之药，冷利、大肠虚者慎用。类金钱菊，去皮带蕊壳蒸用，根能续筋**。筋断者，捣汁滴伤处，用敷其上，半月不开，筋自续矣。
+**〔原文〕咸能软坚，苦辛能下气行水，温能通血脉。入肺、大肠经。消痰结坚痞，唾如胶漆， 噫气**（1）**不除**，<small>噫，于介切，俗作嗳，胸中气不畅，故暧以通之，属不足。亦有挟痰挟火者，属有余。仲景治汗吐下后，痞硬噫气，有旋覆代赭汤（2）</small>，**大肠水肿，去头目风。然走散之药，冷利、大肠虚者慎用。类金钱菊，去皮带蕊壳蒸用，根能续筋**。<small>筋断者，捣汁滴伤处，用敷其上，半月不开，筋自续矣。</small>
 
 【讲解】（1）噎气：即嗳气，由胃上逆发出沉长的声音。（2）旋覆代赭汤：原作“代赭旋覆汤”，据赵本《伤寒论》改。
 
