--- a/ok/bc/bc16-0.1.6.0.0.md
+++ b/ok/bc/bc16-0.1.6.0.0.md
@@ -1,6 +1,6 @@
 ### 白前
 
-**〔原文〕辛苦微寒。长于降气下痰止嗽。治肺气壅实，胸膈逆满。虚者禁用。似牛膝粗长直易断者，白前也；短小柔软能弯者，白薇也** 。近道多有，形色颇同，以此别之。**去头须，甘草水浸一伏时**。即一昼夜。 **焙用。忌羊肉**。
+**〔原文〕辛苦微寒。长于降气下痰止嗽。治肺气壅实，胸膈逆满。虚者禁用。似牛膝粗长直易断者，白前也；短小柔软能弯者，白薇也** 。<small>近道多有，形色颇同，以此别之。</small>**去头须，甘草水浸一伏时**。<small>即一昼夜。</small> **焙用。忌羊肉**。
 
 【讲解】**白前善能祛痰、降气、止咳，寒热咳嗽皆可用**。为萝摩科多年生草本植物柳叶白前和芫花叶白前的根茎及根。生用或蜜炙用。白前与白薇为同属植物，药用部分均为根及根茎，容易混淆。两者区别在于：白前根及根茎弯曲扭转而成团状，根茎呈管状，故有鹅管白前之名；白薇根呈细长圆柱形，丛生于根茎上，形如马尾，长约10-20厘米，似龙胆草，故又有龙胆白薇之名。
 
