--- a/ok/bc/bc16-0.2.1.0.0.md
+++ b/ok/bc/bc16-0.2.1.0.0.md
@@ -1,6 +1,6 @@
 ### 前胡
 
-**〔原文〕辛以畅肺解风寒，甘以悦脾**（1）**理胸腹**，**苦泻厥阴**肝**之热**，**寒散太阳**膀胱**之邪**。微寒，一云微温。**性阴而降，功专下气，气下则火降而痰消**。气有余便是火，火则生痰。**能降实热，治痰热哮端，咳嗽呕逆，痞膈霍乱，小儿疳气，有推陈致新之绩，明目安胎。无外感者忌用**。按柴胡、前胡，均是风药，但柴胡性升，前胡性降为不同。肝胆经风痰，非前胡不能除。**皮白肉黑，味甘气香者良。半夏为使。恶皂角。忌火**。
+**〔原文〕辛以畅肺解风寒，甘以悦脾**（1）**理胸腹**，**苦泻厥阴**<small>肝</small>**之热**，**寒散太阳**膀胱**之邪**。<small>微寒，一云微温。</small>**性阴而降，功专下气，气下则火降而痰消**。<small>气有余便是火，火则生痰。</small>**能降实热，治痰热哮端，咳嗽呕逆，痞膈霍乱，小儿疳气，有推陈致新之绩，明目安胎。无外感者忌用**。<small>按柴胡、前胡，均是风药，但柴胡性升，前胡性降为不同。肝胆经风痰，非前胡不能除。</small>**皮白肉黑，味甘气香者良。半夏为使。恶皂角。忌火**。
 
 【讲解】（1)悦脾:振奋脾气之意。
 
