--- a/ok/bc/bc16-0.2.11.0.0.md
+++ b/ok/bc/bc16-0.2.11.0.0.md
@@ -1,8 +1,8 @@
 ### 海蛤壳
 
-**〔原文〕蛤蜊壳煅为粉，与牡蛎同功**。王海藏曰：肾经血分药。宋徽宗宠妃，病痰嗽，面肿不寐，李防御治之，三日不效，当诛，李技穷忧泣，忽闻市上卖嗽药，一文一贴，吃了今夜得睡，色淡碧，李市之，恐药猛悍，先自试，觉无害，共并三贴为一以进。妃服之，是夕寝安嗽止，面肿亦消。帝大悦，赐直万金。李不知其方，惧得罪，伺得市人，重价求之，乃蚌壳研粉，少加青黛也，以淡齑水，加麻油数滴，调服。 《圣惠方》:由蚬壳研粉，米饮调，治咳嗽不止。
+**〔原文〕蛤蜊壳煅为粉，与牡蛎同功**。<small>王海藏曰：肾经血分药。宋徽宗宠妃，病痰嗽，面肿不寐，李防御治之，三日不效，当诛，李技穷忧泣，忽闻市上卖嗽药，一文一贴，吃了今夜得睡，色淡碧，李市之，恐药猛悍，先自试，觉无害，共并三贴为一以进。妃服之，是夕寝安嗽止，面肿亦消。帝大悦，赐直万金。李不知其方，惧得罪，伺得市人，重价求之，乃蚌壳研粉，少加青黛也，以淡齑水，加麻油数滴，调服。 《圣惠方》:由蚬壳研粉，米饮调，治咳嗽不止。</small>
 
-**蛤肉咸冷。止渴解酒**。牡蛎、蛤唎、海蛤、文蛤，并出大海，大抵海物咸寒，功用略同。江湖蛤蚌，无咸水浸漬，伹能清热利湿，不能软坚。
+**蛤肉咸冷。止渴解酒**。<small>牡蛎、蛤唎、海蛤、文蛤，并出大海，大抵海物咸寒，功用略同。江湖蛤蚌，无咸水浸漬，伹能清热利湿，不能软坚。</small>
 
 **文蛤：背有花纹。兼能除烦渴，利小便。**
 
