--- a/ok/bc/bc16-0.2.12.0.0.md
+++ b/ok/bc/bc16-0.2.12.0.0.md
@@ -1,6 +1,6 @@
 ### 瓦楞子
 
-**〔原文〕甘咸。消血块，散痰积**。煅红醋淬三次，为末，醋膏丸，治一切气血癥瘕。
+**〔原文〕甘咸。消血块，散痰积**。<small>煅红醋淬三次，为末，醋膏丸，治一切气血癥瘕。</small>
 
 【讲解】**瓦楞子功能消瘀化痰，散结止痛**。为蚶科动物魁蚶、泥蚶或毛蚶的贝壳。剔去肉，洗净入药，打碎生用或煅用。
 
