--- a/ok/bc/bc16-0.2.5.0.0.md
+++ b/ok/bc/bc16-0.2.5.0.0.md
@@ -1,6 +1,6 @@
 ### 竹茹
 
-**〔原文〕甘而微寒。开胃土之郁，清肺金之燥，凉血除热。治上焦烦热**，皮入肺，主上焦。温胆汤用之。**温气寒热，噎膈呕啘**，胃热。**吐血衄血**，清肺凉胃。齿血 不止，浸醋含之。**肺痿惊痫**，散肝火。**崩中胎动**。凉胎气。
+**〔原文〕甘而微寒。开胃土之郁，清肺金之燥，凉血除热。治上焦烦热**，<small>皮入肺，主上焦。温胆汤用之。</small>**温气寒热，噎膈呕啘**，<small>胃热。</small>**吐血衄血**，<small>清肺凉胃。齿血 不止，浸醋含之。</small>**肺痿惊痫**，<small>散肝火。</small>**崩中胎动**。<small>凉胎气。</small>
 
 【讲解】**竹茹甘微寒，为治胃热呕吐之良药**。为禾本科青秆竹和淡竹秆的中间层，即去掉绿叶层后所刮下的纤维。生用或姜汁炒用。
 
