--- a/ok/bc/bc16-0.2.7.0.0.md
+++ b/ok/bc/bc16-0.2.7.0.0.md
@@ -1,8 +1,8 @@
 ### 荆 沥	
 
-**〔原文〕 甘平。除风热，化痰涎，开经络， 行血气。治中风失音，惊痫痰迷，眩晕烦闷，消渴热痢，为去风化痰妙药。气虚食少者忌之**。《延年秘录》曰：热多用竹沥，寒多用荆沥。朱丹溪曰：虚痰用竹沥，实痰用荆沥， 并宜姜汁助送，则不凝滞。	
+**〔原文〕 甘平。除风热，化痰涎，开经络， 行血气。治中风失音，惊痫痰迷，眩晕烦闷，消渴热痢，为去风化痰妙药。气虚食少者忌之**。<small>《延年秘录》曰：热多用竹沥，寒多用荆沥。朱丹溪曰：虚痰用竹沥，实痰用荆沥， 并宜姜汁助送，则不凝滞。</small>
 
-**牡荆俗名黄荆。截取尺余，架砖上，中间火炙， 商头承取汁用**。
+**牡荆俗名黄荆。截取尺余，架砖上，中间火炙， 两头承取汁用**。
 
 【讲解】**荆沥甘平，化痰涎，行气血**。为马鞭草科植物牡荆的茎汁，又叫牡荆沥。将新鲜荆木截成尺余长之小段，两端架于砖上，其下以火烧之，则茎汁从两端妨出，以器取之。
 
