--- a/ok/bc/bc16-0.2.10.0.0.md
+++ b/ok/bc/bc16-0.2.10.0.0.md
@@ -1,6 +1,6 @@
 ### 浮海石
 
-**〔原文〕咸润下，寒降火。色白体轻。入肺，清其上源**。肺为水之上源。**止渴止嗽，通淋软坚。除上焦痰热，消癭瘤结核**。顽痰所结，咸能软坚。俞琰《席上腐谈》 曰：肝属木，当浮而反沉；肺属金，当沉而反浮何也？从肝实而肺虚也。故石入水则沉，而南海有浮水之石；木入水则浮，而南海有沉水之香。虚实之反如此。**水沫曰久结成。海中味咸者更良**。
+**〔原文〕咸润下，寒降火。色白体轻。入肺，清其上源**。<small>肺为水之上源。</small>**止渴止嗽，通淋软坚。除上焦痰热，消癭瘤结核**。<small>顽痰所结，咸能软坚。俞琰《席上腐谈》 曰：肝属木，当浮而反沉；肺属金，当沉而反浮何也？从肝实而肺虚也。故石入水则沉，而南海有浮水之石；木入水则浮，而南海有沉水之香。虚实之反如此。</small>**水沫曰久结成。海中味咸者更良**。
 
 【讲解】**浮海石咸寒质轻，善能清肺化痰**。浮海石药材有两类，（1)胞孔科动物脊突苔虫的干燥骨骼，为珊瑚样的不规则块状物，又名石花。（2)火山喷出的岩浆形成多孔状石块，又名浮海石。
 石花分布于我国南方沿海各地，浮石主产于广东沿海，两者均体轻，人水不沉。全年可采，以夏季为多，自海中捞出，用清水洗净，晒干，打碎生用。
