--- a/ok/bc/bc16-0.2.3.0.0.md
+++ b/ok/bc/bc16-0.2.3.0.0.md
@@ -1,6 +1,6 @@
 ### 贝 母
 
-**〔原文〕微寒，苦泻心火，辛散肺郁**。入肺经气分，心火降则肺气宁，诗曰：言采其蝱。蝱即贝母也，取其解郁。**润心肺，清虚痰。治虚劳烦热，咳嗽上气，吐血咯血， 肺痿肺痈，喉痹**君相之火。**目眩**，火热上攻。淋沥小肠邪热。心与小肠相表里，肺为气化之源。**癭瘤**，化痰。**乳闭产难。功专散结除热，敷恶疮**， 唐时有人膊上生疮如人面，能饮酒食物，亦无他苦，遍投诸药悉受之，至贝母，疮乃颦眉，灌之数日，成痂而愈。**敛疮口**。 火降邪散，疮口自敛，非贝母性收敛也。俗以半夏燥毒，代以贝母， 不知贝母寒润，主肺家燥痰；半夏温燥，主脾家湿痰，设或误用，贻误匪浅。 故凡风寒湿食诸痰，贝母非所宜也，宜用半夏、南星。 **川产开瓣者良，独颗无瓣者不堪用。去心，糯米拌炒黄捣用。厚朴、白薇为使。畏秦艽，反乌头**。象贝母治时感风寒。土贝母治外科痰毒。此治燥痰主药。	
+**〔原文〕微寒，苦泻心火，辛散肺郁**。<small>入肺经气分，心火降则肺气宁，诗曰：言采其蝱。蝱即贝母也，取其解郁。</small>**润心肺，清虚痰。治虚劳烦热，咳嗽上气，吐血咯血， 肺痿肺痈，喉痹**<small>君相之火。</small>**目眩**，<small>火热上攻。</small>**淋沥**<small>小肠邪热。心与小肠相表里，肺为气化之源。</small>**癭瘤**，<small>化痰。</small>**乳闭产难。功专散结除热，敷恶疮**，<small> 唐时有人膊上生疮如人面，能饮酒食物，亦无他苦，遍投诸药悉受之，至贝母，疮乃颦眉，灌之数日，成痂而愈。</small>**敛疮口**。 <small>火降邪散，疮口自敛，非贝母性收敛也。俗以半夏燥毒，代以贝母， 不知贝母寒润，主肺家燥痰；半夏温燥，主脾家湿痰，设或误用，贻误匪浅。 故凡风寒湿食诸痰，贝母非所宜也，宜用半夏、南星。</small> **川产开瓣者良，独颗无瓣者不堪用。去心，糯米拌炒黄捣用。厚朴、白薇为使。畏秦艽，反乌头**。<small>象贝母治时感风寒。土贝母治外科痰毒。此治燥痰主药。</small>
 
 【讲解】母贝有川贝母和浙贝母两种。**川贝母润肺化痰功胜，浙贝母开泄散结力强**。川贝母为百合科多年生草本植物川贝母，暗紫贝母和甘肃贝母及棱砂贝母的地下鳞茎。主产于四川、 云南、甘肃等地，均系野生。浙贝母为百合科多年生草本植物浙贝母的地下鳞茎。原产浙江象山县，故又称象贝母，现主产于杭州、宁波等地。均为人工栽培。皆生用。
 
