--- a/ok/bc/bc16-0.2.4.0.0.md
+++ b/ok/bc/bc16-0.2.4.0.0.md
@@ -1,6 +1,6 @@
 ### 瓜蒌
 
-〔**原文〕甘补肺**，本草苦。**寒润下。能清上焦之火，使痰气下降，为治嗽要药**。肺受火逼，失下降之令，故生痰作嗽。**又能荡涤胸中郁热垢腻，生津止渴**，朱丹溪曰：消渴神药。清咽利肠，通大便。清斋方：焙研酒调或米饮下，治小便不通。**通乳消肿。治结胸**(1)**胸痹**，(2)仲景小陷胸汤用之。又云：少阳证口渴者，小柴胡汤，以此易半夏。**酒黄**（3）**热痢，二便不通。炒香酒服，止一切血**。寒降火。**泻者忌用。 实圆长如熟柿，子扁多脂。去油用。枸杞为使。 畏牛膝、干漆，恶干姜，反乌头**。
+〔**原文〕甘补肺**，<small>本草苦。</small>**寒润下。能清上焦之火，使痰气下降，为治嗽要药**。<small>肺受火逼，失下降之令，故生痰作嗽。</small>**又能荡涤胸中郁热垢腻，生津止渴**，<small>朱丹溪曰：消渴神药。清咽利肠，通大便。清斋方：焙研酒调或米饮下，治小便不通。</small>**通乳消肿。治结胸**(1)**胸痹**，(2)<small>仲景小陷胸汤用之。又云：少阳证口渴者，小柴胡汤，以此易半夏。</small>**酒黄**（3）**热痢，二便不通。炒香酒服，止一切血**。<small>寒降火。</small>**泻者忌用。 实圆长如熟柿，子扁多脂。去油用。枸杞为使。 畏牛膝、干漆，恶干姜，反乌头**。
 
 【讲解】结胸：结胸是水热结于胸中，而出现心下痛、按之硬满的病证。（2)胸痹：指胸膺部窒塞疼痛为主的病证。 （3）酒黄：多因饮酒过度，湿热郁蒸，胆热液泄所致身目发黄， 腹满不欲食的证候。	
 
