--- a/ok/bc/bc16-0.2.8.0.0.md
+++ b/ok/bc/bc16-0.2.8.0.0.md
@@ -1,6 +1,6 @@
 ### 天竺黄
 
-**〔原文〕甘而微寒。凉心经，去风热，里窍豁痰，镇肝明目。功同竹沥，而性和缓，无寒滑之患。治大人中风不语，小儿客杵惊痫为尤宜。出南海，大竹之津气结成。黄粉。片片如竹节者真**。
+**〔原文〕甘而微寒。凉心经，去风热，里窍豁痰，镇肝明目。功同竹沥，而性和缓，无寒滑之患。治大人中风不语，小儿客杵惊痫为尤宜。出南海，大竹之津气结成。**<small>即竹内黄粉。</small>**片片如竹节者真**。
 
 **【讲解】天竹黄功能清热化痰，以凉心定惊为主要作用。**为禾本科植物青皮竹等杆内的分泌液，经干燥凝结而成的块状物, 别名竹黄。生用。产于云南、广东、广西等地。
 
