--- a/ok/bc/bc16-0.2.9.0.0.md
+++ b/ok/bc/bc16-0.2.9.0.0.md
@@ -1,6 +1,6 @@
 ### 礞石
 
-**〔原文〕甘咸有毒，体重沉坠。色青入肝，制以硝石，能平肝下气，为治惊利痰之圣药**。吐痰在水上，以石末掺之，痰即随下，王隐君有礞石滚痰丸，能治百病，礞石、焰硝各二两，煅研水飞净一两，大黄酒蒸八两，黄芩酒洗八两，沉香五钱，为末水丸，量虚实服。李时珍曰：风木太过，来制脾土，气不运化，积滞生痰，壅塞上中二焦，变生诸证。礞石重坠，硝性疏决，使痰积通利，诸证自除。**气弱脾虚者禁用。坚细青黑，中有白星点。硝石礞石等分，打碎拌匀，入坩锅煅至硝尽，石色如金为度，如无金星者不入药。研末水飞，去硝毒用。**
+**〔原文〕甘咸有毒，体重沉坠。色青入肝，制以硝石，能平肝下气，为治惊利痰之圣药**。<small>吐痰在水上，以石末掺之，痰即随下，王隐君有礞石滚痰丸，能治百病，礞石、焰硝各二两，煅研水飞净一两，大黄酒蒸八两，黄芩酒洗八两，沉香五钱，为末水丸，量虚实服。李时珍曰：风木太过，来制脾土，气不运化，积滞生痰，壅塞上中二焦，变生诸证。礞石重坠，硝性疏决，使痰积通利，诸证自除。</small>**气弱脾虚者禁用。坚细青黑，中有白星点。硝石礞石等分，打碎拌匀，入坩锅煅至硝尽，石色如金为度，如无金星者不入药。研末水飞，去硝毒用。**
 
 【讲解】**礞石善能下气消痰，并能平肝镇惊**。为硅酸盐类矿石。药材分青礞石与金礞石两种，青礞石为绿泥石片岩，应用较广；金艨石为云母片岩。我国凡有云母矿山处均产，但以四川产者为佳。采后击碎，与火硝共煅至礞石呈金黄色时为止。用水飞去其硝毒，阴干入药用。
 
