--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -46,7 +46,7 @@
 
 气血的分布可分为内外两大区域。内为脏腑，外为形体组织。气血在整体均衡分布的基础上稍有波动。形体获得气血多的时候，脏腑获得的少，反之亦然。
 
-劳作时，消耗的气血总量变大，而相应脏腑的藏精量减少。气血的分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，而脏腑藏精量增加。气血的分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴。
+劳作时，消耗的气血总量变大，而相应脏腑的藏精量减少。气血的分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳，这里的阳是指形体；休息时，消耗的气血总量小，而脏腑藏精量增加。气血的分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴，这里的阴指脏腑。
 
 因此，正常人在劳作与休息之间应维持一种平衡。劳作累了要休息，休息多了要劳作，所谓一阴一阳谓之道。两者都有合适的度，需要劳作以养阳，又不能过度劳累；需要休息以养阴，又不能过度休息。
 
@@ -66,7 +66,7 @@
 
 内经讲春夏养阳，秋冬养阴，就是在天人合一的大背景下，借助自然之力，用最低的成本来完成养阳、养阴的目的。
 
-春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动气血向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的精就可以养阳。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
+春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动气血向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。此时适合养形体这个阳，如能借此机会适度增加劳作，则消耗很少的精就可以达到形体健壮的效果。反之如果此时想养脏腑这个阴，养脏腑需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，达不到理想的效果。
 
 秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，气血趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入脏腑，完成养阴的过程。
 
@@ -122,7 +122,7 @@
 >
 > 《素问•脉要精微论》
 
-自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳脏腑之阴都养不好，肾精消耗速度快，人易病、早衰、短寿。
+自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳、脏腑之阴都养不好，肾精消耗速度快，人易病、早衰、短寿。
 
 > **夫四时阴阳，万物之根本也(1)，所以圣人春夏养阳，秋冬养阴，以从其根，故与万物沉浮于生长之门(2)。逆其根，则伐其本。坏其真矣(3)。故阴阳四时者，万物之终始也，死生之本也，逆之则灾害生，从之则荷疾不起(4)。**
 >
