--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -176,7 +176,7 @@
 >
 > 《素问•热论》
 
-> 阳明为*二阳*，故邪在太阳不解，传入阳明。阳明主肌肉，为多气多血之经，故邪入阳明，正邪相争剧烈，身热尤甚。张仲景据此认为，病邪侵袭阳明，多从燥化，故谓“胃家实”，以胃肠燥热实为其特点。身热是阳明病证的主要症状，《内经》在六经病症中唯独提到阳明病有身热一症，从而突出了阳明病的这一特点。如张景岳说：“伤寒多发热，而独此云身热者，盖阳明主肌肉，身热尤甚也。”阳明之脉挟鼻而络于目，邪在阳明，上干目鼻，则鼻干而目疼。“胃不和则卧不安”，邪热在胃，上扰神明，故不得卧。
+> 阳明为二阳，故邪在太阳不解，传入阳明。阳明主肌肉，为多气多血之经，故邪入阳明，正邪相争剧烈，身热尤甚。张仲景据此认为，病邪侵袭阳明，多从燥化，故谓“胃家实”，以胃肠燥热实为其特点。身热是阳明病证的主要症状，《内经》在六经病症中唯独提到阳明病有身热一症，从而突出了阳明病的这一特点。如张景岳说：“伤寒多发热，而独此云身热者，盖阳明主肌肉，身热尤甚也。”阳明之脉挟鼻而络于目，邪在阳明，上干目鼻，则鼻干而目疼。“胃不和则卧不安”，邪热在胃，上扰神明，故不得卧。
 >
 > 《黄帝内经讲解-第七章病证学说-二、伤寒类-证候》
 
@@ -220,7 +220,7 @@
 >
 > 《伤寒论讲解-辨少阴病脉证并治第十一》
 
-> **少阴脉贯肾络于肺，系舌本，故口燥舌干而渴。**
+> **五日少阴受之。少阴脉贯肾络于肺，系舌本，故口燥舌干而渴。**
 >
 > 《素问•热论》
 
