--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -206,6 +206,10 @@
 
 气态物质以经络为主要通道，特殊情况也可在经络之外运行。
 
+`一个很多初学者对经络的误区：`
+
+`市面上流传的经络图往往只有十二正经和奇经八脉。这让初学者误认为没有这些线路的地方就没有经络。其实经络图中标明的只是经络的主干道，主干道上还会生出很多细小的络脉。这些络脉太复杂，所有没有在图上标出。大家仔细学习《概论-经络》、《针灸学-经络》就知道，除了这些主干道，经络还包括十五络脉、十二经别、十二经筋、十二皮部等等，是完全覆盖全身上下、内外的。`
+
 ## 2、人体地气
 
 #### 2.1、概述
