--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -11,7 +11,7 @@
 中医中的脉诊，是通过感受动脉的跳动情况来了解气血的状态。原理是经络中的无形的气态物质推动有形的血脉跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
 
 > 脉乃气血先见，气血有盛衰，脏腑有偏胜。气血俱盛，脉阴阳俱盛；气血俱衰，脉阴阳俱衰。气独胜者，则脉强；血独盛者，则脉滑；气偏衰者，则脉微；血偏衰者，则脉涩；气血和者，则脉缓；气血平者，则脉平；气血乱者，则脉乱；气血脱者，则脉绝；阳迫气血，则脉数；阴阻气血，则脉迟；若感于邪，气血扰动，脉随变化，变化无穷，气血使之；病变百端，本原别之；欲知病源，当凭脉变；欲知病变，先揣其本，本之不齐，在人体躬，相体以诊，病无遁情。
->
+> 
 > 《桂本伤寒论-平脉法第一》
 
 2）内与外的关系
@@ -23,7 +23,7 @@
 人体的目、面、舌、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
 
 > 前人云：有是症则有是病。对病人所反映出来的症状要不厌其多，资料越多越有利于辨证。因此，可以说诊察是辨证论治的起点。
->
+> 
 > 《中医临证程序与临床辨证思维方法-诊察》
 
 有时还会出现不同的指示灯表达了相反的故障信息，这时要根据经验判断哪个指示灯表示的问题更准确，需要进行取舍，并在后继的调理过程中进行观察，判断取舍是否正确。这就是“舍脉从证”或者“舍证从脉”。
@@ -61,7 +61,7 @@
 从肌肉角度看，当出现肌肉不结实、人中沟变浅缩短的情况，代表脾的能力下降。严重的出现臂、腿、臀等部位的肌肉失养、瘦削，称为大肉陷下，则代表脾精衰败。
 
 > 骨为肾所主，肾为先天之本；肉为脾所主，脾为后天之本。如果人中沟深而长，面部肌肉高厚，轮廓方正，面部上、中、下三部耸起而不平陷，肌肉丰满，骨骼高起者，则提示先后天精气皆旺盛，所以人能长寿，活百岁而终其天年。
->
+> 
 > 《黄帝内经讲解-寿夭与先后天的关系》
 
 #### 3、判断气血的状态
@@ -77,13 +77,13 @@
 为什么面部的色泽能反应人体气血的状态呢？因为人体脏腑与经络相联，全身的经络都与面部相联。只有脏腑正气充足，功能强健，邪气很少，才能在面部体现出光泽明亮的状态。
 
 > 十二经脉，三百六十五络，其血气皆上注于面而走空窍”
->
+> 
 > 《灵枢•邪气脏腑病形》
 
 具体面部不同的部位与脏腑的关系，内容也比较多。《概论-诊法》不太详细，应该参看国医大师孙光荣主编的《口诀浅释》的望诊部分。
 
 > 两眉之间，名为印堂，又称阙中，在面部中间的最高之处，是相关肺病的部位；印堂的上面，名为阙上，阙上到头发边缘，名为天庭，天庭处在整个面部最高最上的地方，是相关头面疾病的部位；阙上处在天庭和印堂之中，所以是相关头面及咽喉疾病的部位，印堂略向下，在两眼之间，名为山根，又称下极，是相关心病的部位......
->
+> 
 > [《口诀浅释》](https://www.gmzyjc.com/read/qs/qs01.md#_2)
 
 ##### 3.2、脉象
@@ -91,7 +91,7 @@
 诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内各种要素的失衡状态。
 
 > 十二经脉循行部位上均有搏动应手之处。因此，可以在每一经的动脉处，测候该条经脉所络属脏腑的功能活动。例如，中部天，手太阴太渊穴，即寸口脉处,可诊候肺。中部人，手少阴神门穴处，可诊候心。下部天，足厥阴五里穴处，可诊候肝，女子取太冲穴。下部地，足少阴太溪穴处，可诊候肾。下部人，足太阴箕门穴处，可诊候脾，趺阳脉冲阳穴处可诊候胃。临证可在上述部位，测候所主脏腑精气的盛衰。
->
+> 
 > 《黄帝内经讲解-诊脉部位》
 
 脉的跳动是一种波动，其频率、力度、长度、高度等等指标皆有特定意义。
@@ -103,39 +103,39 @@
 长度：脉搏每个波动与按脉手指接触的长度应适中，若长度较长，像琴弦一样，称为弦脉，代表肝胆气瘀滞，气不通则痛，所以常有痛症。若长度较短，像豆子一样，称为动脉，代表气血不通或者气血逆乱。
 
 > 伤寒，**脉弦**细，头痛，发热者，属**少阳**⑴。
->
+> 
 > 《伤寒论讲解-265条》
 
 这里弦脉是一个容易误解的脉，因其解释为像琴弦，容易被误解为有力。其实弦脉就是长度较长，与力度无关。
 
 > 春脉弦...其脉之来，**濡弱而长**，故曰弦
->
+> 
 > 《难经-十五难》
->
+> 
 > 紧脉是言其有力，弦脉是言其**挺直的形象**
->
+> 
 > 《口诀浅释-切诊》
->
+> 
 > 弦脉与紧脉似同而实异。**弦以象言**，紧则以力言。弦脉如弓弦，按之不移；紧脉则如转动的绳索，来往有力而不固定。
->
+> 
 > 《伤寒论讲解-辨脉法》
 
-流速：脉的流动速度应适中，若过于流利，感觉圆滑，称为滑脉，代表气血涌动过快；若流动过于慢，往来艰涩、迟滞，如轻刀刮竹，代表气血流动慢。
+起伏：脉的起伏若过于流利，感觉圆滑，称为滑脉，代表气血涌动过快；若起伏艰涩、迟滞，如轻刀刮竹，代表气血不足。  
 
 频率：脉搏正常频率应该是一呼一吸跳动四次，多于这个次数称之为数脉，代表有热；少于四次称为迟脉，代表有寒。
 
 高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；正常情况下，无论浮、中、沉，脉搏的感觉应相差不大，代表气血分配较均匀。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于里层。
 
-以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
+以上力度、频率、高度、宽度、长度、起伏代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从起伏辨阴阳，数、迟从频率辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
 
 > **问曰：脉有阴阳，何谓也？答曰：凡脉大浮数动滑，此名阳也；脉沉涩弱弦微，此名阴也。凡阴病见阳脉者生，阳病见阴脉者死。**
->
+> 
 > 《伤寒论-辨脉法》
 
 这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有，数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的总结，其中有些为组合脉，比如濡脉为浮、细、虚的组合，主有湿邪；芤脉为浮、大、虚的组合，主津血伤；革脉为芤脉浮、大、虚的基础上加弦的组合，主精血亏；。
 
 > 此言者，非有六脉俱动也，谓浮、沉、长、短、滑、涩也。浮者阳也，滑者阳也，长者阳也；沉者阴也，短者阴也，涩者阴也。所谓一阴一阳者，谓脉来沉而滑也，一阴二阳者，谓脉来沉滑而长也，一阴三阳者，谓脉来浮滑而长，时一沉也；所谓一阳一阴者，谓脉来浮而涩也；一阳二阴者，谓脉来长而沉涩也；一阳三阴者，谓脉来沉涩而短，时一浮也。各以其经所在，名病顺逆也。
->
+> 
 > 《难经-四难》
 
 总之脉象越接近正常波形，人越健康；远离正常波形，则不健康，严重的则代表死亡。中医中的各种绝脉，比如真脏脉、死脉、怪脉都是远离正常波形的脉象。理解脉的逻辑含义，能认识到脉象是按照不同维度的阴阳进行组合的道理，学习脉诊并不难。
@@ -145,7 +145,7 @@
 寸口脉是诊手腕肺经太渊穴的脉搏来诊断全身。因为“脉气始于胃，输于脾、但百脉朝会于肺，需赖肺气的推动才能灌注于五脏六腑”，所以各脏腑病变在寸口脉上都有体现。
 
 > 寸口者，脉之大会，手太阴之脉动也。人一呼脉行三寸，一吸脉行三寸，呼吸定息，脉行六寸。人一日一夜，凡一万三千五百息，脉行五十度，周于身。漏水下百刻，营卫行阳二十五度，行阴亦二十五度，为一周也，故五十度复会于手太阴。寸口者，五脏六腑之所终始，故法取于寸口也。
->
+> 
 > 《难经-一难》
 
 ##### 3.3、舌象
@@ -165,130 +165,124 @@
 脉诊与色诊有一个区别在于脉象更能体现当前的身体能量状态，而面色更能体现较长时间的身体状态。年轻健康的人初得病的时候，一般不易发生面色的变化，而脉象上往往有体现。而老年久病之人，面色不好，经过调理后，可能脉象很快能见到好转，但是面色的好转要经过一个相对长的时间。
 
 > 面部色泽变化是五脏精气盛衰的具体表现，一般情况下新病不易引起色泽的变化。所以如果面色失于荣润，都是病久伤及五脏精气的表现，所以为久病。所谓“脉不夺”，是相对“色夺”而言的，意谓久病面部色泽的异常变化较脉象的异常变化更为明显，所以不能理解为久病没有脉象的异常变化。
->
+> 
 > 《黄帝内经讲解- 色脉互参》
 
 > **夫色脉与尺之相应也，如桴鼓影响之相应也，不得相失也，此亦本末根叶之出候也，故根死则叶枯矣⑴。色脉形肉不得相失也，故知一则为工，知二则为神，知三则神且明矣（2）。**
->
+> 
 > 《灵枢•邪气脏腑病形》
 
 诊断总的原则是，无论望色、切脉还是舌诊，我们都需要先知道正常人的情况是如何的，比如正常的面色是怎样的？正常的脉象是怎样的？正常的舌像是怎样的？然后才能知常达变，通过病人面色、脉象和舌像与正常情况的区别，来分析人体气血失衡的虚实，并施以补泻的调理方案。然后再根据调理后面色、脉象、舌像的变化，来确定调理方向是否正确。如此反复，最终将脉象、舌像调理到正常为止。
-
-
 
 ## 3、判断严重情况
 
 诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
 
 > 若久病之人，本不能食，但突然反而暴食，这是中焦脾胃之气将绝的征象，称为“除中”，也是“回光返照”的一种表现。...
->
+> 
 > 亡阴亡阳之脱汗，又称绝汗，常表现为大汗淋漓、汗出如珠，或汗出如油等，为阴阳离决之危证，多属难救。...
->
+> 
 > 根据五行学说，面部之五色与五脏相生者为顺，与五脏者相克者为逆。如肾病面见黄色为土克水，为病难愈；若见青色，为水生木，为病易治。肺病，面见黑色者，金生水，主病易愈；若见红赤，火克金，为病难愈。...
->
+> 
 > 瞳仁散大，为肾精不足或将竭；瞳仁固定，为精绝神亡。...
->
+> 
 > 鼻翼煽动，伴有高热者，多为外感之肺热壅盛，亦见于肺肾精气衰竭而出现之喘息。...
->
+> 
 > 人中满，唇翻，是脾阳绝；人中短缩，是脾阴绝...
->
+> 
 > 久病重病，处于衰竭状态的病人，若见呃逆，多为病情危笃难愈之征...
->
+> 
 > （小儿）疾病时指纹未出风关者，病势轻浅；指纹透至气关者，为病势深入，病情加重；指纹达于命关者，病势深重；指纹延伸至指甲端者，称透关射甲，病情多危笃难治。...
->
+> 
 > 《中医药学概论》
 
 > **黑庭①赤颧，出如拇指，病虽小愈，亦必卒死；唇面黑青，五官黑起，擦残汗粉②，白色皆死。**
->
+> 
 > 注：
->
+> 
 > ①庭：指天庭。
->
+> 
 > ②擦残汗粉：五官忽然出现黑中夹白，好像擦汗时将残粉揩去后的面色，黑白明显的样子。...
->
+> 
 > **善色不病，于义诚当①；恶色不病，必主凶殃。五官陷弱，庭阙不张②，蕃蔽卑小③，不病神强④。**...
->
+> 
 > **阳绝戴眼②，阴脱目盲，气脱眶陷，睛定神亡。**
->
+> 
 > ②戴眼：指病人眼睛上视，不能转动。...
->
+> 
 > **言微难复，夺气可知。俨妄无伦①，神明已失。**...
->
+> 
 > 阳证出现阴脉则病危。...
->
+> 
 > **心绝之脉，如操带钩，转豆①躁疾，一日可忧。**
->
+> 
 > 注：
->
+> 
 > ①转豆，脉来象一连串豆子，颗颗累累的感觉。
->
+> 
 > 本段是讲心绝脉。
->
+> 
 > **肝绝之脉，循刀责责①，新张弓弦，死在八日。**
->
+> 
 > 注：
->
+> 
 > ①循刀责责：如按在刀刃上，细硬毫无从容、生气。
->
+> 
 > 本段是讲肝绝脉。
->
+> 
 > **脾绝雀啄①，又同屋漏，复杯水流，四日无救。**
->
+> 
 > 注：
->
+> 
 > ①啄：Zhuo，音镯。鸟吃东西叫啄。雀啄，鸟雀啄食状。
->
+> 
 > 本段是讲脾绝脉，
->
+> 
 > **肺绝维何？如风吹毛，毛羽中肤①，三曰而号。**
->
+> 
 > 注：
->
+> 
 > ①毛羽中肤：形容鸟的羽毛碰到人的皮肤那样，轻浮无根。
->
+> 
 > 本段是讲肺绝脉。
->
+> 
 > **肾绝伊何？发如夺索①，辟辟弹石②，四曰而作。**
->
+> 
 > 注：
->
+> 
 > ①夺索，按脉好像摸在长而散乱无序的绳索上。
->
+> 
 > ②弹石：如摸在弹石上很硬很沉。
->
+> 
 > 本段是讲肾绝脉。
->
+> 
 > **命脉将绝，鱼翔①虾游②。至如涌泉，莫可挽留。**
->
+> 
 > 注：
->
+> 
 > ①鱼翔：是怪脉的一种，如同鱼在水中游翔的状态。
->
+> 
 > ②虾游：也是怪脉之一，好像虾游一样，静而不动，忽而一跃即去。
->
+> 
 > 本段是讲鱼翔、虾游等败脉。
->
+> 
 > 《口诀浅释》
 
-
-
 > **头者，精明之府（2），头倾视深，精神将夺矣（3）。背者，胸中之府，背曲肩随，府将坏矣（4）。腰者，肾之府，转摇不能，肾将惫矣（5）。膝者，筋之府，屈伸不能，行则偻附，筋将惫矣（6）。骨者，髓之府，不能久立，行则振掉，骨将惫矣（7）**...
->
+> 
 > **大骨枯槁（1），大肉陷下（2），胸中气满，腹内痛（3），心中不便，肩项身热（4），破䐃脱肉，目眶陷（5），真藏见，目不见人，立死（6）。**
->
+> 
 > 《素问•玉机真脏论》...
->
+> 
 > **面青目赤，面赤目白，面青目黑，面黑目白，面赤目青，皆死也（2）。...**
->
+> 
 > 口唇外翻是肌肉衰萎，足太阴脾气竭绝的征象...
->
+> 
 > 虚里脉搏动停止不至，是宗气亏竭的表现。而宗气赖脾胃后天水谷精气化生，宗气亏竭又是胃气生化之源内绝的结果，所以主死。...
->
+> 
 > 虚里穴搏动过甚，内动与衣俱振动，是宗气外泄，胃气将尽的具体表现。...
->
+> 
 > 《黄帝内经讲解》
-
-
 
 ## 4、总结
 
@@ -308,15 +302,8 @@
 
 用药方面，《本草》、《方剂》、《伤寒》、《金匮》、《温病》都需了解。
 
-
-
 ## 题目
 
 1. 脉诊能够判断人体气血状态，原理是经络中的无形的----物质推动有形的血脉跳动。
 
 2. 中医通过四诊望、闻、问、切的手段，搜集人体-----、有形的表现，来判断人体-----、无形的状态，包括精、神、元气、气态物质、血、津液等要素的平衡或者失衡。
-
-      
-
-
-
