--- a/ok/gl/gl03-0.2.5.0.0.md
+++ b/ok/gl/gl03-0.2.5.0.0.md
@@ -10,7 +10,7 @@
 
 #### （二）手阳明大肠经
 
-起于食指桡侧端（[商阳](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.1.md)穴）经过手背行于上肢伸侧前缘，上肩，至肩关节前缘，向后到第七颈椎棘突下（[大椎](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.14.md)穴），再向前下行入锁骨上窝（[缺盆](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.12.md)），进人胸腔络肺，向下通过膈肌下行，属大肠。
+起于食指桡侧端（[商阳](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.1.md)穴）经过手背行于上肢伸侧前缘，上肩，至肩关节前缘，向后到第七颈椎棘突下（[大椎](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.14.md)穴），再向前下行入锁骨上窝（[缺盆](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.12.md)），进入胸腔络肺，向下通过膈肌下行，属大肠。
 
 分支：从锁骨上窝上行，经颈部至面颊，入下齿中，回出挟口两旁，左右交叉于[人中](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.26.md)，至对侧鼻翼旁（[迎香](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.20.md)穴)，交于足阳明胃经。（图6）
 
